--- a/text/看书.md
+++ b/text/看书.md
@@ -1,5 +1,5 @@
 
-转眼过了一日，[甲侧：必云转眼过了一日者，是反衬红玉挨一刻似一夏也，知乎？]原来次日就是王子腾夫人的寿诞，那里原打发人来请贾母王夫人的，王夫人见贾母不自在，也便不去了。[甲侧：所谓一笔两用也！]倒是薛姨妈同凤姐儿并贾家几个姊妹、宝钗、宝玉一齐都去了，至晚方回。
+转眼过了一日，[甲侧：必云转眼过了一日者，是反衬红玉挨一刻似一夏也，知乎？]原来次日就是王子腾夫人的寿诞，那里原打发人来请贾母王夫人的，王夫人见贾母不去，自己也便不去了。[甲侧：所谓一笔两用也！]倒是薛姨妈同凤姐儿并贾家几个姊妹、宝钗、宝玉一齐都去了，至晚方回。
 
 可巧王夫人见贾环下了学，便命他来抄个《金刚咒》唪诵。[甲侧：用《金刚咒》引五鬼法。]那贾环正在王夫人炕上坐着，命人点灯，拿腔作势的抄写。[甲侧：小人乍得意者齐来一玩。]一时叫彩云倒杯茶来，一时又叫玉钏儿来剪剪蜡花，一时又说金钏儿挡了灯影。众丫鬟们素日厌恶他，都不答理。只有彩霞还和他合的来，[甲侧：暗中又伏一风月之隙。]倒了一钟茶来递与他。见王夫人和人说话儿，他便悄悄的向贾环说道：“你安些分罢，何苦讨这个厌那个厌的。”贾环道：“我也知道了，你别哄我。如今你和宝玉好，把我不答理，我也看出来了。”彩霞咬着嘴唇，向贾环头上戳了一指头，说道：“没良心的！狗咬吕洞宾，不识好人心。”[甲双：风月之情，皆系彼此业障所牵。虽云“惺惺惜惺惺”，但亦从业障而来。蠢妇配才郎，世间固不少，然俏女慕村夫者尤多，所谓业障牵魔，不在才貌之论。][庚辰眉批：此等世俗之言，亦因人而用，妥极当极！壬午孟夏，雨窗。畸笏。]
 
