--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,24 @@
 
+脑电波是否可以传递信息？ - 冰笛的回答 <br>
+https://www.zhihu.com/question/432751476/answer/3522215512
+
+冰笛：可以，只是太垃圾了。
+向外辐射的脑电波是由大约860亿个神经元以及近1000倍于此数的突触连接中传递信息时的电位变化叠加而成的。细胞膜级别的电位变化辐射功率极小，而且还是这么大数量的监控目标叠加在一起，所以必须得贴着头皮接收，收敛出几个低频波才有点意义。否则对高频域进行解读，就是一个‘乱’字。能有多乱呢？来想象一下同时监听860亿人聊天时的场景。
+所以，脑电波最高频率才不足50hz，能传递的信息十分有限，比如还活着、兴奋中、抑郁中、癫痫中、睡眠中……诸如此类。
+而过去老掉牙的modem，上网速率是9600hz(bps)，现在光纤都是百兆起步。
+所以，就别想脑电波了，这是60年代的鸡肋技术，快扔了吧。
+
+FM 调制与 AM 调制有哪些区别？ - 选择大于努力的回答 <br>
+https://www.zhihu.com/question/644865408/answer/3460638661
+
+选择大于努力：FM信号是频率变化，低频有用信号幅度越大，FM信号频率越高，反之亦然，如下图所示:根据上图我们可以看出，为把低频有用信号还原出来，要把FM信号先转化成AM信号，再用AM信号的解调方法把低频有用信号还原出来。
+
+收音机的构造及工作原理是什么？ - 选择大于努力的回答  <br>
+https://www.zhihu.com/question/562504064/answer/3445009416
+
+选择大于努力：上节收音机模型中的电感L1和电容C1组成了调谐电路，说白了就是一个LC并联电路，如下图所示 LC并联电路有个重要特性就是它的谐振频率 其中，L为电感器电感量，C为电容容量，可见谐振频率和电路中电感器和电容有关。
+
+------
 淘宝推出「高退款人群屏蔽功能」，仅对服饰行业商家开放，会影响用户正常退换货吗？怎么算是高退款？ <br>
 https://www.zhihu.com/question/1905672699918901514
 
