--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,10 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.14：
+最新 5.15：
 
+2018~2019年我曾自学过一段时间的抽象代数，现在已经忘光了，要说作用好像也没什么用，也许对我的代数思维产生了一些潜移默化的影响。接下来的打算是，我不会去寻找数学工具来应用到我的研究里，只能说我可能会找一些典型的数学问题来验证我的研究思路是否正确。我连英语都没有系统的学习过，是不可能花时间系统的学习数学语言的。
+
+-------
 周蕙 - 约定
 
 作词: 姚若龙 <br>
