--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,12 @@
 
 最新 5.15：
 
+代数拓扑和黎曼几何有什么联系吗? - Imagismus的回答 <br>
+https://www.zhihu.com/question/652192438/answer/1899722174597694743
+
+这种专业的文章感觉写的很用心，但是我是一点都看不懂，基本上是一辈子也不可能看懂了。如果一定要看的话，那我会从哲学的角度去理解，但这就会导致我的理解和作者想要表达的意思不一样。以前我尝试过去看数学书，但是由于不理解作者想要表达的意思，让我非常苦恼。现在我不再追求弄明白作者想要表达什么，只看我自己能理解出什么，用这种方法看书，那什么书都可以看。至于这篇文章我没能理解出什么新的东西，也许数学专业的人看了会有收获。
+
+------
 2018~2019年我曾自学过一段时间的抽象代数，现在已经忘光了，要说作用好像也没什么用，也许对我的代数思维产生了一些潜移默化的影响。接下来的打算是，我不会去寻找数学工具来应用到我的研究里，只能说我可能会找一些典型的数学问题来验证我的研究思路是否正确。我连英语都没有系统的学习过，是不可能花时间系统的学习数学语言的。
 
 -------
