--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.15：
 
+真的直接向我提问，我很可能说不出什么东西，但经过深度思考后，我又有很多零碎的想法想要表达。
+
+------
 有些数学工作者不喜欢看我写的东西别看，看了又不开心不是自讨没趣吗？至少我写的东西知乎不会推给你，如果你在其他地方看到，那要怪也应该怪发给你看的人。
 
 ------
