--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,7 @@
+什么是自旋联络？ - Singular的回答 <br>
+https://www.zhihu.com/question/301723809/answer/1905056235738334128
+
+Singular：就是旋量丛上的联络. 有时也直接把Spin联络称为Levi-Civita联络. 这个定义从主丛（标架丛） 上看是很自然的. 如果（紧可定向的）黎曼流形 是一个Spin流形（只需要 即可），那么我们可以取到它的标架丛 的一个2叶提升 , 其中 是一个principal bundle. 上有一个Levi-C…阅读全文​
 
 脑电波是否可以传递信息？ - 冰笛的回答 <br>
 https://www.zhihu.com/question/432751476/answer/3522215512
