--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,17 @@
+如何判定不可约多项式？ - 日月其慆的回答  <br>
+https://www.zhihu.com/question/568994226/answer/2786912278
+
+日月其慆：
+有大佬已经讲得很清楚了。但容我再水几句吧。 事实上这是一种极为重要且常见的技巧：模p约化（modulo p induction).具体可参考任何一本负责任的近世代数教程（大雾）. 其实Eisenstein Criterion也可由这个技巧推出（模p➕唯一析因）…阅读全文​
+
+如何判定一个四次方程是否可以被因式分解？ - ostrich2333的回答  <br>
+https://www.zhihu.com/question/333799651/answer/743739357
+
+ostrich2333：
+通信
+1.猜 2. 求导得出单调性 3.根据导数的正负判断单调性做图 4.求倒为零的点的函数值 5.做图 零点即为可因式分解的点…阅读全文​
+
+-------
 什么是自旋联络？ - Singular的回答 <br>
 https://www.zhihu.com/question/301723809/answer/1905056235738334128
 
