--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,62 @@
 
 最新 5.16：
 
+刘子林 - 孙子兵法与三十六计
+
+作词：辉力
+作曲：郭建勇
+
+长风当歌<br>
+金鼓为乐<br>
+喊一曲兵法绝唱<br>
+
+长风当歌<br>
+金鼓为乐<br>
+喊一曲兵法绝唱<br>
+旌旗作笔<br>
+春秋为墨<br>
+写一篇智谋文章<br>
+长风当歌<br>
+马蹄为乐<br>
+喊一首生命绝唱<br>
+金戈作笔<br>
+岁月为墨<br>
+写一篇英雄文章<br>
+
+六六三十六<br>
+驰骋疆场风雷走<br>
+六六三十六<br>
+安邦定国百姓宁<br>
+六六三十六<br>
+数中有术数不尽<br>
+六六三十六<br>
+天地之数计无穷<br>
+
+驰骋疆场风雷走<br>
+安邦定国百姓宁<br>
+数中有术数不尽<br>
+天地之数计无穷<br>
+
+许嵩 - 幻听
+
+词曲：许嵩
+
+如今一个人听歌总是会觉得失落<br>
+幻听你在我的耳边轻轻诉说<br>
+夜色多温柔<br>
+你有多爱我<br>
+
+如今一个人听歌总是会觉得难过<br>
+爱已不在这里我却还没走脱<br>
+列表里的歌<br>
+随过往流动<br>
+
+如今一个人听歌总是会觉得难过<br>
+爱已不在这里我却还没走脱<br>
+如果你回头<br>
+不要放下我
+
+------
 指令遵循可以用大模型中的概率向量来模拟，我感觉这个好神奇，我没想明白，你们有深入研究过吗？
 
 -------
