--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,15 @@
 
+孙膑说：一切治理士兵，布阵统兵，用兵作战的将领，任用官员必须选用称职的人，在他们受命任职的时候，要授给他们彩色绶章以及相应的车辆、服装，以后他们升职或降职时，也要给予相应的物品。..要按照州县籍贯给士兵编队，从乡里中选人任带兵官职。用不同颜色的旗帜和不同的图形作为各部队的标帜。用金鼓传达命令。行军时要队形严整，依次行进。向敌军讨战时可以用散乱的队形，以便引诱迷惑敌军；可以像绳索一样绵亘不断布阵围困敌军；部署重兵威慑敌军；可以使用楼车布阵进行弩战；用防御阵形，防止军兵疲困；长距离驰援时，各部队要彼此靠拢；激战时要交替使用各种部队。..用轻装的部队去消灭溃散的敌军；攻坚用雁行阵；..面向丘陵地布阵用圭形阵；..在平坦的地方交战，撤退前先发动进攻以迷惑敌军，撤退时要部署兵力作后卫掩护；..两军混战、犬牙交错时，要善于运用精锐部队，循隙觅缝攻击敌军；..在杂草荆棘丛生的地方作战，要开辟出畅通的道路；战胜归来，要保持军队阵形严整，军容威武，以振国威；..要抢占山地右翼以威慑敌军。遇到荆棘阻路的地方，可以绕道而行；在停止战斗时，军队要布成雁行阵势以保安全；把守险要的关隘，要使甩多兵种混合部队；退军时要注意隐蔽，并交替掩护；经过山林地带要保持队形顺序通过；袭击城池要像水流一样横扫千钧；夜间撤退要有明显的标志识别；夜间警戒要有符节作为凭证。插入敌阵攻敌时，要用敢死队；和敌军短兵相接时，使用长兵器和战车；紧急运送军用物资要用车。阵锋要成锥形；兵员不足时，布阵要把各兵种混合编队；混合编队是因为便于防御敌军进攻。为了保持队伍整齐，避免混乱，要结成阵势。当黑云压城、形势危急之时，当权的人容易急躁。像狂飙烈焰一般冲击敌阵，是因为在敌人惊疑之际有机可乘。隐蔽自己的兵力，使用欺骗的谋略，是为了引诱敌军上钩。借助山区复杂的地形设伏，是为了在山地战中消灭敌军。..是为了夺取渡口。..不把作战意图告诉身边的士兵，是为了保守作战机密。..广列兵器，多布旗帜，是为了迷惑敌军。动用快速勇猛的部队和轻便的战车，是为了追击逃敌。在敌军的威胁下转移部队，是为了避开强敌，保存实力。为了便于火攻，要借助风势。故意装出行动迟缓，躲闪避让的样子，是要引诱敌军追赶。选出精干的士兵，轻装出击，是为了迎击敌军的先锋。加强阵势，激励士兵，是为了攻击拼命的敌军。故意破坏自己阵地的屏障，是用以迷惑敌军。故意遗弃一些物资军械，装出败退的样子，用以引诱敌军上钩。..整夜巡逻，宜至天明，并有联络信号互相呼应，从而保证夜里驻扎的安全。把各种军用物资分散储存，可以保证军队取胜。使用精锐部队，是为了防止敌军劫营。
+
+孙膑说：集结军兵准备打仗时，务必要注意激发将士的士气。经过行军再次集合军队时，务必注意军队的训练和提高士气。当军队临近敌军阵地时，务必要注意激励士气。决战日期确定之后，务必让全军将士激发出决一死战的士气。在交战当天，务必要让将士保持高昂的士气。..用来为三军将士壮威，从而激发士气。..是借以提高士气。将领..穿短衣并系紧皮衣，用以鼓舞将士们的斗志。将领下令，命令全军将士每人只带三天口粮，..为了坚定将士们决一死战的决心。将领召见将担任后卫的将士们告诫说：..为了保持高昂的士气。....士兵多而又善战，敌军就必定失败。将士们士气不高，行动就会迟缓，行动迟缓就去贻误战机，那就必然导致失利，....不能救治，出现将士损躯，家庭残破的情况。将领要派使者去慰问，..
+
+孙膑说：要事先明确颁示赏赐官职的等级和财物的数量..要善于了解人。了解人才能信任人，不要让人因不得信任而离去。有必胜的把握才可出战，但不可让敌人事先得知....付诸行动必须慎重。..
+
+兵阵的阵式共有10 种：有方阵、圆阵、疏阵、数阵、锥形阵、雁形阵、钩形阵、玄襄阵、火阵和水阵。这些兵阵各有各的长处，各有各的用处。方阵用来截击敌军。圆阵用以集中兵力防守。疏阵用以制造声势。数阵的作用是使放军不能分割消灭本方军队。锥形阵用来突破敌军阵地并切断其相互联系。雁形阵用来进行弓弩战。钩形阵在情况发生变化而改变作战计划时使用。玄襄阵用来迷惑敌军，使其难以实现既定意图。火阵用来攻拔敌军营寨。水阵用来加强防守。
+
+　　方阵布列的方法是：中心的兵力少，而四周的兵力则必须多而强，将领的指挥位置靠后。中间布兵少是为了便于发号施令。四周兵力多而强，是为了便于截击敌军。指挥位置靠后。是为了..圆阵之法..（原文缺）疏阵的布列方法是在士兵铠甲不足而兵力又少时用来加强阵势的。要多设旗帜显示威武，多置兵器显示兵多。因此，布阵时必须加大军兵的行距间隔，在其间多设旗帜羽旄，要把锋利的兵器布置在外侧。要注意疏密适当，既不致于受敌军的威逼，更不致于被敌军包围、做好这一点的关键在于深思熟虑，谨慎施行。战车不能急驶，步兵不要急行。疏阵使用的要旨在于，把士兵分编为若干个战斗群，既可前进也可后退，既可进攻也可防守，可以和敌军对战，也可以截击疲弱的敌军。疏阵用得好，可以战胜精锐的敌军。数阵的布列方法是：不必加大行距间隔，行列要相互靠近，排列有序，兵器要密集而又便于施展，前后要互相保护。..当本方士兵有恐慌情绪时，要停止行动，保持稳定，..当敌军退走时，不要追击；敌军来犯时，不要堵截，可以选择敌军的弱点加以攻击，或挫敌军锋锐，要计算周详，不给敌军任何可乘之机，让敌军在阵前如遇大山一般，只好退走。这样，数阵就坚不可破了。锥形阵的布列，要使它像利剑一般。其前锋如不锐利，就不能攻入敌阵；其两翼如不锋利，就不能截断敌军；其主体如不雄厚，就不能布成锥形阵。因此，锥形阵的前锋必须锐利，两翼必须轻灵锋利，主体必须兵力雄厚。这样的锥形阵就可以突破敌阵，截断敌军了。雁形阵的布列，..这就是雁形阵的作用。雁形阵前面排列要像一样，而后面排列则要像善伏的狸猫一样。..这就是雁形阵的作用。钩形阵的布列，前面必须排成方形，左右两翼相对应必须布成钩形。指挥用的金、鼓、角三种发声器要齐全，五种颜色的旗帜必须齐备，要让自己的士兵能辨别本军指挥的声响号令和指挥旗帜。..布列玄襄阵，必须多设各种旗帜，鼓声要密集而雄壮，士兵要表面散乱而实际稳定，战车表面杂乱而实际上排列有序，..让士兵像在茶楼酒馆一样，喧闹杂乱，如同从天而降，从地里冒出来一样，走来走去，络绎不绝，整日不断。这就是玄襄阵的摆法。用火阵的战法是，在沟垒之外，再修筑堑壕，每隔五步堆积柴草，要疏密均匀，分派好点火的士兵，让他们准备好点火用的火把，点火时动作要轻灵利落，..如果火烧向本方，那和敌军交战是不能取胜的，必须立即停止行动，向后撤退。用火战的条件是，敌军的位置在下风头，敌军的阵地地势低平，野草丛生，敌军在被烧时无处可逃。具备这些条件时才可用火攻，遇上大风天气，敌军阵地又是野草丛生，柴草堆积，营地戒备又不严密时，也可以用火攻。这时，用火攻造成敌军混乱，再用如雨一样密集的箭射杀敌军，并擂鼓呐喊，督促士兵攻击，以兵势辅助火攻。这就是火战的方法。用水战的方法是，多用步兵而少用战车，要让部下准备好捞钩、缆绳等器具和船只用具。前进时要前后相随，后退时不可拥挤，要适时收缩队形顺流而下，以敌军为射杀目标。水战的要旨在于，用轻便船只作指挥船，用快船作联络船，敌军后退时就追击，敌军进攻时就收缩队形迎战，要根据形势变化而谨慎指挥进退应敌，敌军移动就加以钳制，敌军结阵就..敌军密集就分割。敌军中常有隐蔽的战车和步兵，一定要察清有多少，在攻击敌军船只，控制渡口时，还要调动步兵在陆路配合作战。这就是水战的作战方法。
+
+-------
 转眼过了一日，[甲侧：必云转眼过了一日者，是反衬红玉挨一刻似一夏也，知乎？]原来次日就是王子腾夫人的寿诞，那里原打发人来请贾母王夫人的，王夫人见贾母不去，自己也便不去了。[甲侧：所谓一笔两用也！]倒是薛姨妈同凤姐儿并贾家几个姊妹、宝钗、宝玉一齐都去了，至晚方回。
 
 可巧王夫人见贾环下了学，便命他来抄个《金刚咒》唪诵。[甲侧：用《金刚咒》引五鬼法。]那贾环正在王夫人炕上坐着，命人点灯，拿腔作势的抄写。[甲侧：小人乍得意者齐来一玩。]一时叫彩云倒杯茶来，一时又叫玉钏儿来剪剪蜡花，一时又说金钏儿挡了灯影。众丫鬟们素日厌恶他，都不答理。只有彩霞还和他合的来，[甲侧：暗中又伏一风月之隙。]倒了一钟茶来递与他。见王夫人和人说话儿，他便悄悄的向贾环说道：“你安些分罢，何苦讨这个厌那个厌的。”贾环道：“我也知道了，你别哄我。如今你和宝玉好，把我不答理，我也看出来了。”彩霞咬着嘴唇，向贾环头上戳了一指头，说道：“没良心的！狗咬吕洞宾，不识好人心。”[甲双：风月之情，皆系彼此业障所牵。虽云“惺惺惜惺惺”，但亦从业障而来。蠢妇配才郎，世间固不少，然俏女慕村夫者尤多，所谓业障牵魔，不在才貌之论。][庚辰眉批：此等世俗之言，亦因人而用，妥极当极！壬午孟夏，雨窗。畸笏。]
