--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.16：
 
-旺盛的分享欲控制不住，但不想在这里发太多东西，感觉像是在裸奔一样。频繁加密太麻烦了，如果不嫌我唐突的话，打算以后多发邮件给没有拉黑我的人。另一篇文章邮件发你了。
+旺盛的分享欲控制不住，但不想在这里发太多东西，感觉像是在裸奔一样。频繁加密太麻烦了（主要是还有一个环节是要验证我的密码有没有写错了），如果不嫌我唐突的话，打算以后多发邮件给没有拉黑我的人。另一篇文章邮件发你了。
 
 ------
 刘子林 - 孙子兵法与三十六计
