--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,8 @@
 
 旺盛的分享欲控制不住，但不想在这里发太多东西，感觉像是在裸奔一样。频繁加密太麻烦了（主要是还有一个环节是要验证我的密码有没有写错了），如果不嫌我唐突的话，打算以后多发邮件给没有拉黑我的人。另一篇文章邮件发你了。
 
+发邮件的时候是针对特定的某个人，容易踩雷，所以更多的时候还是需要加密，因为加密踩雷了责任主要由解密的人承担，但是发邮件踩雷了那责任主要是由我承担的。虽然加密更麻烦，但这也提醒我要把内容做的更加用心，发邮件方便，那有时候就会比较随意。
+
 ------
 刘子林 - 孙子兵法与三十六计
 
