--- a/text/挑战.md
+++ b/text/挑战.md
@@ -7,6 +7,8 @@ https://www.zhihu.com/question/1900991406127932994/answer/1903502183082730251
 
 怕什么，至少有50%的人能过吧，看他们是怎么做的照着学就行了。有aigc查重时写论论文的总负担会比没有ai时更重吗？没有ai时写的论文会比用ai辅助写的更有价值吗？应该都不会。
 
+“几十亿的生意，不知道最后进了谁的腰包，而这个提出AIGC检测要求的人，又能分到多少”  这个说的很有道理。
+
 -------
 黄芪、炙甘草、茯苓粉、党参、辛夷花、炒苍耳子
 
