--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,12 +2,10 @@
 
 最新 5.17：
 
-AIGC 查重让毕业生崩溃，学生自己写的段落被判定 AI 生成，这种检测平台能力如何？这样检测可靠吗？ - 苏荷的回答 <br>
+AIGC 查重让毕业生崩溃，学生自己写的段落被判定 AI 生成，这种检测平台能力如何？这样检测可靠吗？ - 苏荷的回答  <br>
 https://www.zhihu.com/question/1900991406127932994/answer/1903502183082730251
 
-怕什么，至少有50%的人能过吧，看他们是怎么做的照着学就行了。有aigc查重时写论论文的总负担会比没有ai时更重吗？没有ai时写的论文会比用ai辅助写的更有价值吗？应该都不会。
-
-“几十亿的生意，不知道最后进了谁的腰包，而这个提出AIGC检测要求的人，又能分到多少”  这个说的很有道理。
+做任何事情只要有指标限制我就会感到厌恶，你要让我真的没有限制全凭爱好自由做一件事，我又没什么闲情逸致，但如果做的事情是服务于自己的理想，有没有指标由自己说了算，那一切又变得有趣起来了。
 
 -------
 黄芪、炙甘草、茯苓粉、党参、辛夷花、炒苍耳子
