--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,15 @@
 
 最新 5.17：
 
+南：草木至南方，有枝任也。从𣎵𢆉声。
+
+荷：芙蕖叶。从草何声。
+
+祋：殳也。从殳示声。或说城郭市里，高县羊皮，有不当入而欲入者，暂下以惊牛马曰祋。故从示、殳。《诗》曰：“何戈与祋。”
+
+㣙：行㣙㣙也。从彳由声。
+
+-------
 AIGC 查重让毕业生崩溃，学生自己写的段落被判定 AI 生成，这种检测平台能力如何？这样检测可靠吗？ - 苏荷的回答  <br>
 https://www.zhihu.com/question/1900991406127932994/answer/1903502183082730251
 
