--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,10 @@
+
+音视频基础知识 | 如何采集声音及模数转换原理 - 深入浅出cpp的文章  <br>
+https://zhuanlan.zhihu.com/p/686366152
+
+从上图中可以看到PCM编码主要有三个过程：采样、量化、编码。
+
+-------
 如何判定不可约多项式？ - 日月其慆的回答  <br>
 https://www.zhihu.com/question/568994226/answer/2786912278
 
