--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+列宁“反映论”与古希腊“摹仿说” <br>
+https://ptext.nju.edu.cn/b5/02/c12203a242946/page.htm
+
+认识向客体的运动从来只能辩证地进行：为了更准确地前进而后退——为了更好的跃进（认识?）而后退。相合线和相离线：彼此相交的圆圈。交错点＝人的和人类历史的实践。（实践＝同实在事物的无限多的方面中的一个方面相符合的标准）。
+
+------
 音视频基础知识 | 如何采集声音及模数转换原理 - 深入浅出cpp的文章  <br>
 https://zhuanlan.zhihu.com/p/686366152
 
