--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,29 @@
 
+第四点，关于认识客观世界的问题。　
+
+　　人对客观世界的认识，由必然王国到自由王国的飞跃，要有一个过程。例如对于在中国如何进行民主革命的问题，从一九二一年党的建立直到一九四五年党的第七次代表大会，一共二十四年，我们全党的认识才完全统一起来。中间经过一次全党范围的整风，从一九四二年春天到一九四五年夏天，有三年半的时间。那是一次细致的整风，采用的方法是民主的方法，就是说，不管什么人犯了错误，只要认识了、改正了，就好了，而且大家帮助他认识，帮助他改正，叫做“惩前毖后，治病救人”，“从团结的愿望出发，经过批评或者斗争，分清是非，在新的基础上达到新的团结”。“团结——批评——团结”这个公式，就是在那个时候产生的。那次整风帮助全党同志统一了认识。对于当时的民主革命应当怎么办，党的总路线和各项具体政策应当怎么定，这些问题，都是在那个时期，特别是在整风之后，才得到完全解决的。
+
+　　从党的建立到抗日时期，中间有北伐战争和十年土地革命战争。我们经过了两次胜利，两次失败。北伐战争胜利了，但是到一九二七年，革命遭到了失败。土地革命战争曾经取得了很大的胜利，红军发展到三十万人，后来又遭到挫折，经过长征，这三十万人缩小到两万多人，到陕北以后补充了一点，还是不到三万人，就是说，不到三十万人的十分之一。究竟是那三十万人的军队强些，还是这不到三万人的军队强些？我们受了那样大的挫折，吃过那样大的苦头，就得到锻炼，有了经验，纠正了错误路线，恢复了正确路线，所以这不到三万人的军队，比起过去那个三十万人的军队来，要更强些。在会议报告里说，最近四年，我们的路线是正确的，成绩是主要的，我们在实际工作中犯过一些错误，吃了苦头，有了经验了，因此我们更强了，而不是更弱了。情形正是这样。在民主革命时期，经过胜利、失败，再胜利、再失败，两次比较，我们才认识了中国这个客观世界。在抗日战争前夜和抗日战争时期，我写了一些论文，例如《中国革命战争的战略问题》、《论持久战》、《新民主主义论》、《〈共产党人〉发刊词》，替中央起草过一些关于政策、策略的文件，都是革命经验的总结。那些论文和文件，只有在那个时候才能产生，在以前不可能，因为没有经过大风大浪，没有两次胜利和两次失败的比较，还没有充分的经验，还不能充分认识中国革命的规律。
+
+　　中国这个客观世界，整个地说来，是由中国人认识的，不是在共产国际管中国问题的同志们认识的。共产国际的这些同志就不了解或者说不很了解中国社会，中国民族，中国革命。对于中国这个客观世界，我们自己在很长时间内都认识不清楚，何况外国同志呢？
+
+　　在抗日时期，我们才制定了合乎情况的党的总路线和一整套具体政策。这时候，中国民主革命这个必然王国才被我们认识，我们才有了自由。到这个时候，我们已经干了二十来年的革命。过去那么多年的革命工作，是带着很大的盲目性的。如果有人说，有那一位同志，比如说中央的任何同志，比如说我自己，对于中国革命的规律，在一开始的时候就完全认识了，那是吹牛，你们切记不要信，没有那回事。过去，特别是开始时期，我们只是一股劲儿要革命，至于怎么革法，革些什么，那些先革，那些后革，那些要到下一阶段才革，在一个相当长的时间内，都没有弄清楚，或者说没有完全弄清楚。我讲我们中国共产党人在民主革命时期艰难地但是成功地认识中国革命规律这一段历史情况的目的，是想引导同志们理解这样一件事：对于建设社会主义的规律的认识，必须有一个过程。必须从实践出发，从没有经验到有经验，从有较少的经验，到有较多的经验，从建设社会主义这个未被认识的必然王国，到逐步地克服盲目性、认识客观规律、从而获得自由，在认识上出现一个飞跃，到达自由王国。
+
+　　对于社会主义建设，我们还缺乏经验。我向好几个国家的兄弟党的代表团谈过这个问题。我说，对于建设社会主义经济，我们没有经验。
+
+　　这个问题，我也向一些资本主义国家的新闻记者谈过，其中有一个美国人叫斯诺。他老要来中国，一九六○年让他来了。我同他谈过一次话。我说：“你知道，对于政治、军事，对于阶级斗争，我们有一套经验，有一套方针、政策和办法；至于社会主义建设，过去没有干过，还没有经验。你会说，不是已经干了十一年了吗？是干了十一年了，可是还缺乏知识，还缺乏经验，就算开始有了一点，也还不多。”斯诺要我讲讲中国建设的长期计划。我说：“不晓得。”他说：“你讲话太谨慎。”我说：“不是什么谨慎不谨慎，我就是不晓得呀，就是没有经验呀。”同志们，也真是不晓得，我们确实还缺少经验，确实还没有这样一个长期计划。一九六○年，那正是我们碰了许多钉子的时候。一九六一年，我同蒙哥马利谈话，也说到上面那些意见。他说：“再过五十年，你们就了不起了。”他的意思是说，过了五十年我们就会壮大起来，而且会“侵略”人家，五十年内还不会。他的这种看法，一九六○年他来中国的时候就对我说过。我说：“我们是马克思列宁主义者，我们的国家是社会主义国家，不是资本主义国家，因此，一百年，一万年，我们也不会侵略别人。至于建设强大的社会主义经济，在中国，五十年不行，会要一百年，或者更多的时间。在你们国家，资本主义的发展，经过了好几百年。十六世纪不算，那还是在中世纪。从十七世纪到现在，已经有三百六十多年。在我国，要建设起强大的社会主义经济，我估计要花一百多年。”十七世纪是什么时代呢？那是中国的明朝末年和清朝初年。再过一个世纪，到十八世纪的上半期，就是清朝乾隆时代，《红楼梦》的作者曹雪芹就生活在那个时代，就是产生贾宝玉这种不满意封建制度的小说人物的时代。乾隆时代，中国已经有了一些资本主义生产关系的萌芽，但是还是封建社会。这就是出现大观园里那一群小说人物的社会背景。在那个时候以前，在十七世纪，欧洲的一些国家已经在发展资本主义了，经过三百多年，资本主义的生产力有了现在这个样子。社会主义和资本主义比较，有许多优越性，我们国家经济的发展，会比资本主义国家快得多。可是，中国的人口多、底子薄，经济落后，要使生产力很大地发展起来，要赶上和超过世界上最先进的资本主义国家，没有一百多年的时间，我看是不行的。也许只要几十年，例如有些人所设想的五十年，就能做到。果然这样，谢天谢地，岂不甚好。但是我劝同志们宁肯把困难想得多一点，因而把时间设想得长一点。三百几十年建设了强大的资本主义经济，在我国，五十年内外到一百年内外，建设起强大的社会主义经济，那又有什么不好呢？从现在起，五十年内外到一百年内外，是世界上社会制度彻底变化的伟大时代，是一个翻天覆地的时代，是过去任何一个历史时代都不能比拟的。处在这样一个时代，我们必须准备进行同过去时代的斗争形式有着许多不同特点的伟大的斗争。为了这个事业，我们必须把马克思列宁主义的普遍真理同中国社会主义建设的具体实际、并且同今后世界革命的具体实际，尽可能好一些地结合起来，从实践中一步一步地认识斗争的客观规律。要准备着由于盲目性而遭受到许多的失败和挫折，从而取得经验，取得最后的胜利。由这点出发，把时间设想得长一点，是有许多好处的，设想得短了反而有害。
+
+　　在社会主义建设上，我们还有很大的盲目性。社会主义经济，对于我们来说，还有许多未被认识的必然王国。拿我来说，经济建设工作中间的许多问题，还不懂得。工业、商业，我就不大懂。对于农业，我懂得一点。但是也只是比较地懂得，还是懂得不多。要较多地懂得农业，还要懂得土壤学、植物学、作物栽培学、农业化学、农业机械，等等；还要懂得农业内部的各个分业部门，例如粮、棉、油、麻、丝、茶、糖、菜、烟、果、药、杂等等；还有畜牧业，还有林业。我是相信苏联威廉斯土壤学的，在威廉斯的土壤学著作里，主张农、林、牧三结合。我认为必须要有这种三结合，否则对于农业不利。所有这些农业生产方面的问题，我劝同志们，在工作之暇，认真研究一下，我也还想研究一点。但是到现时止，在这些方面，我的知识很少。我注意得较多的是制度方面的问题，生产关系方面的问题。至于生产力方面，我的知识很少。社会主义建设，从我们全党来说，知识都非常不够。我们应当在今后一段时间内，积累经验，努力学习，在实践中间逐步地加深对它的认识，弄清楚它的规律。一定要下一番苦功，要切切实实地去调查它，研究它。要下去蹲点，到生产大队、生产队，到工厂，到商店，去蹲点。调查研究，我们从前做得比较好，可是进城以后，不认真做了。一九六一年我们又重新提倡，现在情况已经有所改变。但是，在领导干部中间，特别是在高级领导干部中间，有一些地方、部门和企业，至今还没有形成风气。有一些省委书记，到现在还没有下去蹲过点。如果省委书记不去，怎么能叫地委书记、县委书记下去蹲点呢。这个现象不好，必须改变过来。
+
+　　从中华人民共和国成立，到现在已经十二年了。这十二年分为前八年和后四年。一九五○年到一九五七年底，是前八年。一九五八年到现在，是后四年。我们这次会议已经初步总结了过去工作的经验，主要是后四年的经验。这个总结，反映在会议报告里面。我们已经制定、或者正在制定、或者将要制定各个方面的具体政策。已经制定了的，例如农村公社六十条，工业企业七十条，高等教育六十条，科学研究工作十四条，这些条例草案已经在实行或者试行，以后还要修改，有些还可能大改。正在制定的，例如商业工作条例。将要制定的，例如中小学教育条例。我们的党政机关和群众团体的工作，也应当制定一些条例。军队已经制定了一些条例。总之，工、农、商、学、兵、政、党这七个方面的工作，都应当好好地总结经验，制定一整套的方针、政策和办法，使它们在正确的轨道上前进。
+
+　　有了总路线还不够，还必须在总路线指导之下，在工、农、商、学、兵、政、党各个方面，有一整套适合情况的具体的方针、政策和办法，才有可能说服群众和干部，并且把这些当作教材去教育他们，使他们有一个统一的认识和统一的行动，然后才有可能取得革命事业和建设事业的胜利，否则是不可能的。对于这一点，我们在抗日时期就有了深刻的认识。在那时候，我们这样做了，就使得干部和群众对于民主革命时期的一整套具体的方针、政策和办法，有了统一的认识，因而有了统一的行动，使当时的民主革命事业取得了胜利，这是大家知道的。在社会主义革命和社会主义建设的时期，头八年内，我们的革命任务，在农村是完成对封建主义的土地制度的改革和接着实现农业合作化；在城市是实现对资本主义工商业的社会主义改造。在经济建设方面，那时候的任务是恢复经济和实现第一个五年计划。不论在革命方面和建设方面，那时候都有一条适合客观情况的、有充分说服力的总路线，以及在总路线指导下的一整套方针、政策和办法，因此教育了干部和群众，统一了他们的认识，工作也就比较做得好。这也是大家知道的。但是，那时候有这样一种情况，因为我们没有经验，在经济建设方面，我们只得照抄苏联，特别是在重工业方面，几乎一切都抄苏联，自己的创造性很少。这在当时是完全必要的，同时又是一个缺点，缺乏创造性，缺乏独立自主的能力。这当然不应当是长久之计。从一九五八年起，我们就确立了自力更生为主、争取外援为辅的方针。在一九五八年党的八大二次会议上，通过了“鼓足干劲，力争上游，多快好省地建设社会主义”的总路线，在那一年又办起了人民公社，提出了大跃进的口号。在提出社会主义建设总路线的一个相当时间内，我们还没有来得及、也没有可能规定一整套适合情况的具体的方针、政策和办法，因为经验还不足。在这种情形下，干部和群众，还得不到一整套的教材，得不到系统的政策教育，也就不可能真正有统一的认识和统一的行动。要经过一段时间，碰过一些钉子，有了正、反两方面的经验，才有这样的可能。现在好了，有了这些东西了，或者正在制定这些东西。这样，我们就可以更加妥善地进行社会主义革命和社会主义建设。在总路线指导之下，制定一整套的具体的方针、政策和办法，必须通过从群众中来的方法，通过作系统的周密的调查研究的方法，对工作中的成功经验和失败经验，作历史的考察，才能找出客观事物所固有的而不是人们主观臆造的规律，才能制定适合情况的各种条例。这件事很重要，请同志们注意到这点。
+
+　　工、农、商、学、兵、政、党这七个方面，党是领导一切的。党要领导工业、农业、商业、文化教育、军队和政府。我们的党，一般说来是很好的。我们党员的成分，主要的是工人和贫苦农民。我们的绝大多数干部都是好的，他们都在辛辛苦苦地工作。但是，也要看到，我们党内还存在一些问题，不要想象我们党的情况什么都好。我们现在有一千七百多万党员，这里面差不多有百分之八十的人是建国以后入党的，五十年代入党的。建国以前入党的只占百分之二十。在这百分之二十的人里面，一九三○年以前入党的，二十年代入党的，据前几年计算，有八百多人，这两年死了一些，恐怕只有七百多人了。不论在老的和新的党员里面，特别是在新党员里面，都有一些品质不纯和作风不纯的人。他们是个人主义者、官僚主义者、主观主义者，甚至是变了质的分子。还有些人挂着共产党员的招牌，但是并不代表工人阶级，而是代表资产阶级。党内并不纯粹，这一点必须看到，否则我们是要吃亏的。
+
+　　上面是我讲的第四点。就是讲，我们对于客观世界的认识，要有一个过程。先是不认识或者不完全认识，经过反复的实践，在实践里面得到成绩，有了胜利，又翻过筋斗，碰了钉子，有了成功和失败的比较，然后才有可能逐步地发展成为完全的认识或者比较完全的认识。到那个时候，我们就比较主动了，比较自由了，就变成比较聪明一些的人了。自由是对必然的认识和对客观世界的改造。只有在认识必然的基础上，人们才有自由的活动。这是自由和必然的辩证规律。所谓必然，就是客观存在的规律性，在没有认识它以前，我们的行动总是不自觉的，带着盲目性的。这时候我们是一些蠢人。最近几年我们不是干过许多蠢事吗？
+
+-------
 孙膑说：一切治理士兵，布阵统兵，用兵作战的将领，任用官员必须选用称职的人，在他们受命任职的时候，要授给他们彩色绶章以及相应的车辆、服装，以后他们升职或降职时，也要给予相应的物品。..要按照州县籍贯给士兵编队，从乡里中选人任带兵官职。用不同颜色的旗帜和不同的图形作为各部队的标帜。用金鼓传达命令。行军时要队形严整，依次行进。向敌军讨战时可以用散乱的队形，以便引诱迷惑敌军；可以像绳索一样绵亘不断布阵围困敌军；部署重兵威慑敌军；可以使用楼车布阵进行弩战；用防御阵形，防止军兵疲困；长距离驰援时，各部队要彼此靠拢；激战时要交替使用各种部队。..用轻装的部队去消灭溃散的敌军；攻坚用雁行阵；..面向丘陵地布阵用圭形阵；..在平坦的地方交战，撤退前先发动进攻以迷惑敌军，撤退时要部署兵力作后卫掩护；..两军混战、犬牙交错时，要善于运用精锐部队，循隙觅缝攻击敌军；..在杂草荆棘丛生的地方作战，要开辟出畅通的道路；战胜归来，要保持军队阵形严整，军容威武，以振国威；..要抢占山地右翼以威慑敌军。遇到荆棘阻路的地方，可以绕道而行；在停止战斗时，军队要布成雁行阵势以保安全；把守险要的关隘，要使甩多兵种混合部队；退军时要注意隐蔽，并交替掩护；经过山林地带要保持队形顺序通过；袭击城池要像水流一样横扫千钧；夜间撤退要有明显的标志识别；夜间警戒要有符节作为凭证。插入敌阵攻敌时，要用敢死队；和敌军短兵相接时，使用长兵器和战车；紧急运送军用物资要用车。阵锋要成锥形；兵员不足时，布阵要把各兵种混合编队；混合编队是因为便于防御敌军进攻。为了保持队伍整齐，避免混乱，要结成阵势。当黑云压城、形势危急之时，当权的人容易急躁。像狂飙烈焰一般冲击敌阵，是因为在敌人惊疑之际有机可乘。隐蔽自己的兵力，使用欺骗的谋略，是为了引诱敌军上钩。借助山区复杂的地形设伏，是为了在山地战中消灭敌军。..是为了夺取渡口。..不把作战意图告诉身边的士兵，是为了保守作战机密。..广列兵器，多布旗帜，是为了迷惑敌军。动用快速勇猛的部队和轻便的战车，是为了追击逃敌。在敌军的威胁下转移部队，是为了避开强敌，保存实力。为了便于火攻，要借助风势。故意装出行动迟缓，躲闪避让的样子，是要引诱敌军追赶。选出精干的士兵，轻装出击，是为了迎击敌军的先锋。加强阵势，激励士兵，是为了攻击拼命的敌军。故意破坏自己阵地的屏障，是用以迷惑敌军。故意遗弃一些物资军械，装出败退的样子，用以引诱敌军上钩。..整夜巡逻，宜至天明，并有联络信号互相呼应，从而保证夜里驻扎的安全。把各种军用物资分散储存，可以保证军队取胜。使用精锐部队，是为了防止敌军劫营。
 
 孙膑说：集结军兵准备打仗时，务必要注意激发将士的士气。经过行军再次集合军队时，务必注意军队的训练和提高士气。当军队临近敌军阵地时，务必要注意激励士气。决战日期确定之后，务必让全军将士激发出决一死战的士气。在交战当天，务必要让将士保持高昂的士气。..用来为三军将士壮威，从而激发士气。..是借以提高士气。将领..穿短衣并系紧皮衣，用以鼓舞将士们的斗志。将领下令，命令全军将士每人只带三天口粮，..为了坚定将士们决一死战的决心。将领召见将担任后卫的将士们告诫说：..为了保持高昂的士气。....士兵多而又善战，敌军就必定失败。将士们士气不高，行动就会迟缓，行动迟缓就去贻误战机，那就必然导致失利，....不能救治，出现将士损躯，家庭残破的情况。将领要派使者去慰问，..
