--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,8 @@
 
 不同模块结构体对象之间的消息传递。
 
+2年前写的代码全忘光了，有一个很关键的代码在哪里记不起来了，我只知道我写过这个代码。
+
 --------
 南：草木至南方，有枝任也。从𣎵𢆉声。
 
@@ -22,7 +24,7 @@ https://www.zhihu.com/question/1900991406127932994/answer/1903502183082730251
 -------
 黄芪、炙甘草、茯苓粉、党参、辛夷花、炒苍耳子
 
-昨晚半夜还是醒来，加些红枣片
+昨晚半夜还是醒来，加些新疆枣片
 
 ------
 旺盛的分享欲控制不住，但不想在这里发太多东西，感觉像是在裸奔一样。频繁加密太麻烦了（主要是还有一个环节是要验证我的密码有没有写错了），如果不嫌我唐突的话，打算以后多发邮件给没有拉黑我的人。另一篇文章邮件发你了。
