--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,10 @@
 
 最新 5.18：
 
-不同模块结构体对象之间的消息传递。
+我们说一个人对一件事做出判断可能会出错，很多人都对一件事做出相同的判断，那么正确的概率会提高很多，但你的判断是基于其他人都做出相同的判断才做出这个判断的，所以你的判断对这件事的对错不会起到丝毫作用。
+
+------
+不同层次结构体对象之间的消息传递。
 
 2年前写的代码全忘光了，有一个很关键的代码在哪里记不起来了，我只知道我写过这个代码。
 
