--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.18：
 
+我是看git这个软件有很多不爽的，花里胡哨的，给我造成了很大的心智负担，不过现在也没办法，只能用起来小心点。
+
+------
 我们说一个人对一件事做出判断可能会出错，很多人都对一件事做出相同的判断，那么正确的概率会提高很多，但你的判断是基于其他人都做出相同的判断才做出这个判断的，所以你的判断对这件事的对错不会起到丝毫作用。
 
 ------
