--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.18：
 
+唉，两年前的代码写的什么已经完全看不懂了，已经快一年半没写代码，现在我感觉都已经不太会写代码了，去年这个时候还没这种感觉。
+
+------
 我是看git这个软件有很多不爽的，花里胡哨的，给我造成了很大的心智负担，不过现在也没办法，只能用起来小心点。
 
 ------
