--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,8 @@
 
 唉，两年前的代码写的什么已经完全看不懂了，已经快一年半没写代码，现在我感觉都已经不太会写代码了，去年这个时候还没这种感觉。
 
+现在有两种选择：1.把以前的代码回忆起来再写，怕没这个精力和耐心。  2.直接重新从零开始写代码，怕现在的能力不够，怕以前写的一些好代码有需要想不起来也实现不出来。
+
 ------
 我是看git这个软件有很多不爽的，花里胡哨的，给我造成了很大的心智负担，不过现在也没办法，只能用起来小心点。
 
