--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,10 @@
 
 最新 5.18：
 
-唉，两年前的代码写的什么已经完全看不懂了，已经快一年半没写代码，现在我感觉都已经不太会写代码了，去年这个时候还没这种感觉。
+今天怎么情绪这么低落？本以为喝了药后可以振奋一天，还好只是犯困，不是鼻窦炎的头疼也不是失眠的头晕无力。
+
+------
+两年前的代码写的什么已经完全看不懂了，已经快一年半没写代码，现在我感觉都已经不太会写代码了，去年这个时候还没这种感觉。
 
 现在有两种选择：1.把以前的代码回忆起来再写，怕没这个精力和耐心。  2.直接重新从零开始写代码，怕现在的能力不够，怕以前写的一些好代码有需要却想不起来也实现不出来。
 
