--- a/text/挑战.md
+++ b/text/挑战.md
@@ -17,7 +17,9 @@
 
 重新写吧，走一步算一步，看看能写到什么程度，新写的代码如果不能对老代码形成降维打击，那么就算回忆起来也不太可能写出什么飞跃性的代码。
 
-要回忆起来，所有的代码都要回忆起来
+要回忆起来，所有的代码都要回忆起来，今天状态不太对，状态好的时候应该能做到。自己写的代码都回忆不起来，那就不用写代码了。
+
+你写代码不是没有切入点吗？现在去回忆你过去写的代码正是你最好的切入时机。一边回忆，一边尝试这一年来的新想法。
 
 ------
 我是看git这个软件有很多不爽的，花里胡哨的，给我造成了很大的心智负担，不过现在也没办法，只能用起来小心点。
