--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.18：
 
-不像是写代码的，倒是像是在写小说。就当我在写一本关于程序员的意识流【这个词不是我发明的】小说吧，只是写的东西赚不到钱，我都不好意思说它是小说。
+不像是写代码的，倒是像是在写小说。就当我在写一本关于程序员的意识流（这个词不是我发明的）小说吧，只是写的东西赚不到钱，我都不好意思说它是小说。
 
 ------
 胡伟立 - 豪情
