--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,13 @@
+为什么科学家一研究出个成果就抢着发文章，研究成果是否不需要保密？ - 临风的回答
+https://www.zhihu.com/question/632128854/answer/3379259663
+
+临风：塔塔利亚研究过x³+mx²=n的求解方法。这方程和费罗的方程区别在，塔塔利亚研究的方程没有一次项，费罗的方程没有二次项。费奥雷给塔塔利亚出的30道题全是有一次项的。塔塔利亚看到这些题的时候，可能有点蒙圈。直到比赛快要结束的时候，他尽然脑子开窍，尽然找到了求解方法，把30道题全给解决了。
+
+数学史上最惨恩怨对决，开创一元三次方程的解法，却被世人嘲讽为结巴 - 超级数学建模的文章
+https://zhuanlan.zhihu.com/p/82791259
+
+超级数学建模：不同于以往着急着把卡当赶出门外的“塔塔利亚”，这一次，“塔塔利亚”真的心动了!
+
 学者发表论文公开质疑 AlphaFold 「不够资格获得诺奖，称不上突破性发现」，该质疑是否合理？ - Return3656的回答  <br>
 https://www.zhihu.com/question/1905950073155707265/answer/1907377863323289367
 
