--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,11 @@
 
 最新 5.19：
 
+数学：一元3次方程、一元四次方程的解法、一元5次方程无解的证明
+
+AGI：从特殊方程x³+mx²=n的解法悟出一元3次方程通解的整个思维过程
+
+------
 来我这里的一个个都说不会辩证法，只会形式逻辑，其实他们的辩证法用的比我6多了，只不过他们都是在暗地里使用，而我是光明正大的使用。还有人说现在的ai有研究生水平的，先别说ai的形式逻辑怎么样，你就看ai的辩证法水平，配和你比吗？我估计连5岁小孩的水平都不到。
 
 ------
