--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.19：
 
+有个问题，alphago到底会不会辩证法？答案是肯定不会的，不但不会辩证法连形式逻辑也不会，只不过是统计学已经练得出神入化了。但是只会统计学那为什么顶尖人类就毫无还手之力了？这有什么奇怪的，人类比不上机器的事情多了去了，甚至人类有些能力连动物都不如，比如人类的记忆力就不如大猩猩。
+
+------
 数学：一元3次方程、一元四次方程的解法、一元5次方程无解的证明
 
 AGI：从特殊方程x³+mx²=n的解法悟出一元3次方程通解的整个思维过程
