--- a/text/挑战.md
+++ b/text/挑战.md
@@ -12,7 +12,7 @@ AGI：从特殊方程x³+mx²=n的解法悟出一元3次方程通解的整个思
 ------
 来我这里的一个个都说不会辩证法，只会形式逻辑，其实他们的辩证法用的比我6多了，只不过他们都是在暗地里使用，而我是光明正大的使用。还有人说现在的ai有研究生水平的，先别说ai的形式逻辑怎么样，你就看ai的辩证法水平，配和你比吗？我估计单纯的连5岁小孩的水平都不到。
 
-有人从一开始恶意攻击出生家庭不太好的人，都后来的鄙视强者崇拜，我可以明确的告诉你们，这种心态的转换就是辩证法。
+有人从一开始恶意攻击出生家庭不太好的人，痛骂知乎上的脱产者，都后来的鄙视强者崇拜，我可以明确的告诉你们，这种心态的转换就是辩证法。
 
 ------
 不像是写代码的，倒是像是在写小说。就当我在写一本关于程序员的意识流（这个词不是我发明的）小说吧，只是写的东西赚不到钱，我都不好意思说它是小说。
