--- a/text/挑战.md
+++ b/text/挑战.md
@@ -14,6 +14,8 @@ AGI：从特殊方程x³+mx²=n的解法悟出一元3次方程通解的整个思
 
 有人从一开始恶意攻击出生家庭不太好的人，痛骂知乎上的脱产者，都后来的鄙视强者崇拜，我可以明确的告诉你们，这种心态的转换就是辩证法。还有那些很小就学会霸凌的小孩，在本能上也是辩证法驱动的，如果是形式逻辑，那为什么不去霸凌大人呢？
 
+还有那些哲学爱好者，长篇大论东拉西扯来解释什么辩证法和形式逻辑的区别，有意义吗？
+
 ------
 不像是写代码的，倒是像是在写小说。就当我在写一本关于程序员的意识流（这个词不是我发明的）小说吧，只是写的东西赚不到钱，我都不好意思说它是小说。
 
