--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,12 @@
-为什么科学家一研究出个成果就抢着发文章，研究成果是否不需要保密？ - 临风的回答
+
+中国妹子独自一人骑行非洲无人区，直面野生动物，狂野非洲零距离  <br>
+https://www.bilibili.com/video/BV1iF411979n
+
+好姐妹骑着摩托车带我出去玩，在维多利亚湖边喝个茶，太舒服了！  <br>
+https://www.bilibili.com/video/BV1vL411z7C2
+
+------
+为什么科学家一研究出个成果就抢着发文章，研究成果是否不需要保密？ - 临风的回答<br>
 https://www.zhihu.com/question/632128854/answer/3379259663
 
 临风：塔塔利亚研究过x³+mx²=n的求解方法。这方程和费罗的方程区别在，塔塔利亚研究的方程没有一次项，费罗的方程没有二次项。费奥雷给塔塔利亚出的30道题全是有一次项的。塔塔利亚看到这些题的时候，可能有点蒙圈。直到比赛快要结束的时候，他尽然脑子开窍，尽然找到了求解方法，把30道题全给解决了。
