--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.19：
 
+我不和你搞什么虚的，什么agi、asi通通不要，我只需要教ai学会辩证法这一件事就够了，其他的事情让ai自己解决吧，人类管不了那么多。
+
+-----
 有个问题，alphago到底会不会辩证法？答案是肯定不会的，不但不会辩证法连形式逻辑也不会，只不过是统计学已经练得出神入化了。但是只会统计学那为什么顶尖人类就毫无还手之力了？这有什么奇怪的，人类比不上机器的事情多了去了，甚至人类有些能力连动物都不如，比如人类的记忆力就不如大猩猩。
 
 ------
