--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,7 +4,7 @@
 
 我不和你搞什么虚的，什么agi、asi通通不要，我只需要教ai学会辩证法这一件事就够了，其他的事情让ai自己解决吧，人类管不了那么多。
 
-就算我研究的障碍全部打通了，我应该也没有这个精力来写代码了，我现在能长期活下去的一种方案是把我的核心技术透露给思想和我最接近的人，而其他人刚好悟不出来，让得到我技术的人快点做出agi来拯救我这个底层无业游民。客观上如果他不想拯救我放任我自生自灭，那么他是悟不出来的，如果这不是一个客观事实，那我也没办法。
+就算我研究的障碍全部打通了，我应该也没有这个精力来写代码了，我现在能长期活下去的一种方案是把我的核心技术透露给思想和我最接近的人，而其他人刚好悟不出来，让得到我技术的人快点做出agi来拯救我这个底层无业游民。客观上如果他不想拯救我放任我自生自灭，那么他是悟不出来的，如果这不是量子力学的一个客观事实，那我也没办法。
 
 -----
 有个问题，alphago到底会不会辩证法？答案是肯定不会的，不但不会辩证法连形式逻辑也不会，只不过是统计学已经练得出神入化了。但是只会统计学那为什么顶尖人类就毫无还手之力了？这有什么奇怪的，人类比不上机器的事情多了去了，甚至人类有些能力连动物都不如，比如人类的记忆力就不如大猩猩。
