--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.19：
 
+我以前写过一些开源代码，主要是想吸引一些高智商的人来和我交流，我那个开源项目，有人star，也有人联系我帮助解决编译问题，好像没人找我探讨技术问题的。现在想想也不需要，只要我自己表达想法，有人看就行了，他们也不需要给我意见。
+
+------
 这个地方已经不那么私密了，可能以后表达方式要严肃点、谦虚点。
 
 ------
