--- a/text/挑战.md
+++ b/text/挑战.md
@@ -9,6 +9,8 @@
 
 之所以会引来那么大的关注度，是因为这里是公开的，发的却是私密的东西，应该也是大家内心深处真实的东西，是你们憋在心里永远不会说出来的话，我就是这样的人。
 
+最关键的还有一点，你们也都可以在github上发一些自己的私密想法，但好像这样做的人只有我一个。
+
 ------
 大号飘带蝴蝶结高马尾抓夹女2025新款发饰显脸小后脑勺发夹头饰黑  <br>
 https://detail.tmall.com/item.htm?id=720605213436&skuId=5017164380431
