--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.19：
 
+几何元素可以看成命题公式的原子元素，不能使用MP推理时用的代换法，但是通过这些几何元素和->组成复合的命题作为公理仍然是有意义的，这样就可以和命题逻辑的公理L1、L2、L3一起推理，这些公理本身没什么意义，却好像推理过程中的催化剂一样。
+
+------
 我以前写过一些开源代码，主要是想吸引一些高智商的人来和我交流，我那个开源项目，有人star，也有人联系我帮助解决编译问题，好像没人找我探讨技术问题的。现在想想也不需要，只要我自己表达想法，有人看就行了，他们也不需要给我意见。
 
 ------
