--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.19：
 
+不要太虚荣，当第一名其实不好，一直处在5~10名才是最舒适的。
+
+------
 几何元素可以看成命题公式的原子元素，不能使用MP推理时用的代换法，但是通过这些几何元素和->组成复合的命题作为公理仍然是有意义的，这样就可以和命题逻辑的公理L1、L2、L3一起推理，这些公理本身没什么意义，却好像推理过程中的催化剂一样。
 
 ------
