--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,9 +2,12 @@
 
 最新 5.19：
 
-不要太虚荣，当第一名其实不好，一直处在5~10名才是最舒适的。
-
 想再找一份程序员的工作，这一辈子就这么过吧，但我现在的情况，肯定是找不到的。
+
+绝对是找不到的，幻想再多也没用，路是自己选的，输了只能认命。就算找到了，你以为你的心态就不会发生改变吗？
+
+------
+不要太虚荣，当第一名其实不好，一直处在5~10名才是最舒适的。
 
 ------
 几何元素可以看成命题公式的原子元素，不能使用MP推理时用的代换法，但是通过这些几何元素和->组成复合的命题作为公理仍然是有意义的，这样就可以和命题逻辑的公理L1、L2、L3一起推理，这些公理本身没什么意义，却好像推理过程中的催化剂一样。
