--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,15 +2,17 @@
 
 最新 5.19：
 
+“把时空承认为必然属于有限存在者的条件，但却不是无限的原始实存者之实存的条件，看不出他们从何处取得的权力做这样的区分，甚至他们将如何避开把时间中的存有看做必然与有限的自在之物相联系的规定时所遭受的矛盾。因为上帝是这个存有的原因，但却又不可能是时间本身的原因，因为时间必须被预设为物之存有的先天必然条件，因而上帝的原因性在这些物的实存上本身也必须是以时间为条件的，上帝的无限性和独立性这两个概念的矛盾。”
+
+我喜欢的不是数学也不是哲学，我喜欢的是分析人脑思维的原理。
+
+------
 想再找一份程序员的工作，这一辈子就这么过吧，但我现在的情况，肯定是找不到的。
 
 绝对是找不到的，幻想再多也没用，路是自己选的，输了只能认命。就算找到了，你以为你的心态就不会发生改变吗？
 
 ------
 不要太虚荣，当第一名其实不好，一直处在5~10名才是最舒适的。
-
-------
-几何元素可以看成命题公式的原子元素，不能使用MP推理时用的代换法，但是通过这些几何元素和->组成复合的命题作为公理仍然是有意义的，这样就可以和命题逻辑的公理L1、L2、L3一起推理，这些公理本身没什么意义，却好像推理过程中的催化剂一样。
 
 ------
 我以前写过一些开源代码，主要是想吸引一些高智商的人来和我交流，我那个开源项目，有人star，也有人联系我帮助解决编译问题，好像没人找我探讨技术问题的。现在想想也不需要，只要我自己表达想法，有人看就行了，他们也不需要给我意见。
