--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.19：
 
+其实就算ai做imo拿满分也说明不了什么问题，但是没想到imo满分的算力要比围棋满分大那么多，不好优化啊。
+
+------
 “把时空承认为必然属于有限存在者的条件，但却不是无限的原始实存者之实存的条件，看不出他们从何处取得的权力做这样的区分，甚至他们将如何避开把时间中的存有看做必然与有限的自在之物相联系的规定时所遭受的矛盾。因为上帝是这个存有的原因，但却又不可能是时间本身的原因，因为时间必须被预设为物之存有的先天必然条件，因而上帝的原因性在这些物的实存上本身也必须是以时间为条件的，上帝的无限性和独立性这两个概念的矛盾。”
 
 我喜欢的不是数学也不是哲学，我喜欢的是分析人脑思维的原理。
