--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,5 @@
+古龙被谁捅了一刀？吟松阁砍人事件至今还是一个谜<br>
+https://www.163.com/dy/article/DVF0Q1IH0517DVQE.html
 
 中国妹子独自一人骑行非洲无人区，直面野生动物，狂野非洲零距离  <br>
 https://www.bilibili.com/video/BV1iF411979n
