--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,17 +2,15 @@
 
 最新 5.19：
 
+客观上蒋介石和日本人教育了中国人民，毛泽东感谢他们，但是中国人民却不喜欢他们。我承认我在这里发的东西给大家带来了许多欢乐，我自己也挺爽的，但我却像是个小丑一样。蒋介石有全国的壮丁供他挥霍，我没赚到钱反而浪费了时间，感觉心里好不平衡。
+
+------
 其实就算ai做imo拿满分也说明不了什么问题，但是没想到imo满分的算力要比战胜人类大那么多，不好优化啊。
 
 ------
 “把时空承认为必然属于有限存在者的条件，但却不是无限的原始实存者之实存的条件，看不出他们从何处取得的权力做这样的区分，甚至他们将如何避开把时间中的存有看做必然与有限的自在之物相联系的规定时所遭受的矛盾。因为上帝是这个存有的原因，但却又不可能是时间本身的原因，因为时间必须被预设为物之存有的先天必然条件，因而上帝的原因性在这些物的实存上本身也必须是以时间为条件的，上帝的无限性和独立性这两个概念的矛盾。”
 
 我喜欢的不是数学也不是哲学，我喜欢的是分析人脑思维的原理。
-
-------
-想再找一份程序员的工作，这一辈子就这么过吧，但我现在的情况，肯定是找不到的。
-
-绝对是找不到的，幻想再多也没用，路是自己选的，输了只能认命。就算找到了，你以为你的心态就不会发生改变吗？
 
 ------
 不要太虚荣，当第一名其实不好，一直处在5~10名才是最舒适的。
