--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,17 @@
+Deepmind在军棋上战胜人类，How？ - Icybee的文章 <br>
+https://zhuanlan.zhihu.com/p/549532516
+
+台州椒江警方破获特大网络赌博案<br>
+https://zjfzb.zjol.com.cn/html/2024-05/21/content_4231858.htm
+
+六名<br>
+https://www.qiuwenbaike.cn/wiki/%E5%85%AD%E5%90%8D
+
+六名，又称六命、六明，是浙江温州、台州等地的传统押宝游戏，赌具为六支签与一个签筒，签写上名称来自打花会的日山、逢春、安士、荣生、板桂、吉品，表示可压注的六门，以庄家签筒里甩出的签决定输赢[1][2][3]。
+
+六名又叫六命，取自三十四名或三十六名的押花会，花会是儒生创始的一种游戏，好多内容涉及周易，所以花会又称“儒赌”。花会赌一把需要一个上午，耗时且程序繁琐，容易被社会管理者抓获，大抵在民国时期政府严厉禁赌，所以浙江福建沿海的台州温州，泉州等地的赌徒精简花会中的陈姓上六名：陈吉品、陈扳桂、陈逢春、陈荣生、陈日山、陈安士，成了一种更便捷更容易逃避被抓的六名赌法，也就是：第一吉品、第二扳桂、第三逢春、第四荣生、第五日山、第六安士。吉品表示美妙人生之意；扳桂就是蟾宫扳桂，状元及第；逢春就是枯木逢春出现转机渐入佳境；荣生就是受尊敬的人；日山就是日落西山进入低谷；安士就是安逸之士。说的是人的六种命运，故曰：六命。庄家由一名宝官和一名前台荷官组成。赌客和一名制图者（制作宝官出宝的顺序，以便更好的押宝）和庄家对垒。除了吉品押中一赔四，其他押中都是一赔五。赌法和花会类似，只是精简了花会的繁琐。
+
+-------
 古龙被谁捅了一刀？吟松阁砍人事件至今还是一个谜<br>
 https://www.163.com/dy/article/DVF0Q1IH0517DVQE.html
 
