--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,19 @@
 2025年挑战：记录一些想法和分享。
 
-最新 5.19：
+最新 5.20：
 
+首届联众军棋双明大师赛总决赛 广俊 小邪VS花旗 峰少 第三盘_标清 <br>
+https://www.bilibili.com/video/BV1xt411A7J4
+
+军棋现在好像没人玩了，一些顶尖大师的比赛我还是挺喜欢看的。我军棋水平不高，不是军棋圈的，也不专业，如果在军棋圈里发表一些看法，容易被嘲讽（就像民科被官科嘲讽一样)，甚至直接找你pk羞辱你，倒是可以在这里写一些评论，这里应该没有军棋圈的人吧。
+
+13分50秒这一步，我和解说的看法不一样，并不是花旗不敢吃小邪的师长，而是花旗4线刚好放了个工兵，先飞掉小邪的炸弹（其实是工兵），也就是在花旗眼里，他认为飞炸弹比吃师长可能被炸要赚。后面还是被小邪搞的心态爆炸强吃被炸了，也就是该吃的不吃，不该吃的反而吃了。这个小邪下棋好像经常劣势翻盘，给我的感觉是他处于劣势的情况，你就是攻不下来，不断磨你，让你难受，让你想求和都没那么舒坦，把你的心态搞崩，下出一些很亏的棋从而完成翻盘。
+
+其实对一步棋的看法有分歧，通过pk来证明别人的军棋水平低并不能证明别人完全错误，当然大部分情况是适用，的确有很多人水平低还在那里胡乱评论。但对于我这样的人，不擅长单位时间内的竞技游戏，擅长做深度思考的人，并不能通过与这步棋完全无关的pk方法来证明我对这步棋的看法是错的。
+
+像那种猜签的赌博游戏毫无价值，这种军棋双明的赌棋还是挺有意义的。
+
+------
 其实就算ai做imo拿满分也说明不了什么问题，但是没想到imo满分的算力要比战胜人类大那么多，不好优化啊。
 
 ------
