--- a/text/挑战.md
+++ b/text/挑战.md
@@ -9,6 +9,8 @@ https://www.bilibili.com/video/BV1xt411A7J4
 
 13分50秒这一步，我和解说的看法不一样，并不是花旗不敢吃小邪的师长，而是花旗4线刚好放了个工兵，先飞掉小邪的炸弹（其实是工兵），也就是在花旗眼里，他认为飞炸弹比吃师长可能被炸要赚。后面还是被小邪搞的心态爆炸强吃被炸了，也就是该吃的不吃，不该吃的反而吃了。这个小邪下棋好像经常劣势翻盘，给我的感觉是他处于劣势的情况，你就是攻不下来，不断磨你，让你难受，让你想求和都没那么舒坦，把你的心态搞崩，下出一些很亏的棋从而完成翻盘。
 
+从概率上可能我的看法是错的，因为之前已经飞掉了一个炸弹，后面吃师长被炸从概率上变小了，但是军棋不仅仅是概率游戏，还要根据棋的走势来判断。
+
 其实对一步棋的看法有分歧，通过pk来证明别人的军棋水平低并不能证明别人完全错误，当然大部分情况是适用，的确有很多人水平低还在那里胡乱评论。但对于我这样的人，不擅长单位时间内的竞技游戏，擅长做深度思考的人，并不能通过与这步棋完全无关的pk方法来证明我对这步棋的看法是错的。
 
 像那种猜签的赌博游戏毫无价值，这种军棋双明的赌棋还是挺有意义的。
