--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,24 @@
 
 最新 5.20：
 
+【泰语中字｜音译】Ann Thitima《เสียงของหัวใจ 心声》  <br>
+https://www.bilibili.com/video/BV1fa411t7wW/
+
+不是我太敏感 不是我太虚幻<br>
+才会这般爱上你<br>
+不是我太寂寞 不是我在做梦<br>
+我只是跟着感觉走<br>
+很奇怪是吧 这样无所畏惧<br>
+我也同样不只是为何<br>
+**仅仅因为内心的呼唤  似乎远远不够** <br>
+**我仍然不确定 他就是对的那个人** <br>
+**心的声音异常的渴求着 唯有见到他感觉才会好起来**  <br>
+请相信自己的心 哪怕只是一次 <br>
+虽然知道这会是个危险的决定<br>
+请对爱情信任多一些<br>
+尽管爱是一种冒险<br>
+
+-----
 我不属于任何一个圈子，但我又感觉有很多圈子在关注我。
 
 -----
