--- a/text/挑战.md
+++ b/text/挑战.md
@@ -5,8 +5,8 @@
 【泰语中字｜音译】Ann Thitima《เสียงของหัวใจ 心声》  <br>
 https://www.bilibili.com/video/BV1fa411t7wW/
 
-不是我太寂寞 不是我太轻率
-就这么轻易的爱上你
+不是我太寂寞 不是我太轻率<br>
+就这么轻易的爱上你<br>
 不是我太敏感 不是我太虚幻<br>
 才会这般爱上你<br>
 不是我太寂寞 不是我在做梦<br>
