--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.20：
 
+在绝对的美面前，什么变态、人妖、好色、猥琐都已经不重要了。
+
+-------
 【泰语中字｜音译】Ann Thitima《เสียงของหัวใจ 心声》  <br>
 https://www.bilibili.com/video/BV1fa411t7wW/
 
