--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,23 @@
 
 下四国军棋的最佳下法是双控，不是双控对家能相互配合也行。在四暗中，两个实力很强的人做对家，如果相互之间配合的不默契，那么也下不出什么好棋。
 
+第一届双明大师的视频我以前看过，是两个人坐在一起可以相互交流的，相当于双控，后面几届都是分开的，不能相互讨论。
+
+15年-联众军棋最强双明王者大赛双明4进2第三轮 广俊小邪vs我心依旧桀骜不驯 <br>
+https://www.bilibili.com/video/BV18t411A7Se/?p=7
+
+15分47秒：下一步我觉得小邪应该要主动炸了，如果再不炸的话，这个棋就尴尬了。
+
+16分07秒：他现在工兵可能是在装大棋，对着他那个师长，因为师长是明大了，给他一步牵制，看看他反应，这边的话让小邪有时间可以腾出来把这个军炸掉。这步如果再不炸的话，那真的就再没有机会了。
+
+而且这个棋吃过团长的。噢，对的，确实如果这个棋再不炸就比较...只能炸完之后再打兑，只有炸。
+
+哦？那司令他可以再去抓军长吧。如果是抓军长的话，那他军长只此一步，只能炸了。
+
+他看出对家也不想炸，所以也不想把这个军长逼的太急，对吧。
+
+上面是解说，可以看出上面这几步棋的心态非常微妙。小邪肯定是不想炸的，明着炸相当于告诉对手自己无炸了，这个子仅仅是吃了团长，万一炸的只是旅长呢？广俊是想让小邪炸的，但是他看小邪不想炸，所以就没去逼这个军长。但是我个人认为小邪是希望对家去逼迫这个军长的，让这个军长主动碰炸，从而自己这边保留一个暗炸，另外主动炸炸的不一定是军长，但是他这个子之前不摸炸被像司令的子抓时主动碰上来那是军长的可能性就很大，这里有一个很玄的地方，他这个子无论是旅长、师长还是军长被抓时都只能碰炸的，但是被抓一下后，就会增大这个子是军长的概率。
+
 ------
 测试了下，刚更新时有延迟，下的还是上次的。
 
