--- a/text/挑战.md
+++ b/text/挑战.md
@@ -19,7 +19,7 @@ https://www.bilibili.com/video/BV18t411A7Se/?p=7
 
 他看出对家也不想炸，所以也不想把这个军长逼的太急，对吧。
 
-上面是解说，可以看出上面这几步棋的心态非常微妙。小邪肯定是不想炸的，明着炸相当于告诉对手自己无炸了，这个子仅仅是吃了团长，万一炸的只是旅长呢？广俊是想让小邪炸的，但是他看小邪不想炸，所以就没去逼这个军长。但是我个人认为小邪是希望对家去逼迫这个军长的，让这个军长主动碰炸，从而自己这边保留一个暗炸，另外主动炸炸的不一定是军长，但是他这个子之前不摸炸被像司令的子抓时主动碰上来那是军长的可能性就很大，这里有一个很玄的地方，他这个子无论是旅长、师长还是军长被抓时都只能碰炸的，但是被抓一下后，就会增大这个子是军长的概率。
+上面是解说，可以看出上面这几步棋的心态非常微妙。小邪肯定是不想炸的，明着炸相当于告诉对手自己无炸了，这个子仅仅是吃了团长，万一炸的只是旅长呢？广俊是想让小邪炸的，但是他看小邪不想炸以为小邪是想用这个炸弹去炸司令，所以就没去逼这个军长。但是我个人认为小邪是希望对家去逼迫这个军长的，让这个军长主动碰炸，从而自己这边保留一个暗炸，另外主动炸炸的不一定是军长，但是他这个子之前不摸炸被像司令的子抓时主动碰上来那是军长的可能性就很大，这里有一个很玄的地方，他这个子无论是旅长、师长还是军长被抓时都只能碰炸的，但是被抓一下后，就会增大这个子是军长的概率。
 
 ------
 测试了下，刚更新时有延迟，下的还是上次的。
