--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,31 @@
 
 最新 5.17：
 
+甄妮 - 春雨弯刀
+
+作词: 邓伟雄
+作曲：顾嘉煇
+
+情情怨怨在春雨里<br>
+仇仇恨恨在弯刀边<br>
+耀目刀锋光似冰霜<br>
+难断春雨密绵绵<br>
+频频笑笑在春雨里<br>
+名名利利在弯刀边<br>
+断石分金刚胜青霜<br>
+难断心里恨绵绵<br>
+
+心似絮还乱<br>
+恩似灭还现<br>
+万般得失 万般爱恶<br>
+尽在江湖了断<br>
+
+情情怨怨消失春雨里<br>
+名名利利灭却弯刀边<br>
+独剩凄风吹冷肝胆<br>
+陪伴那春雨密绵绵<br>
+
+-------
 乌兰托娅 - 套马杆
 
 作词:刘新圈 作曲:郭永利
