--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,4 +1,169 @@
+　　
+    金色的长袍，金色的胡子，金色的剑，都在闪动着金光。<br>
+　  这老人的身子虽不满四尺，可是他的神情，他的气概，看来却像是个十丈高的巨人。<br>
+　　他忽然问：“刚才惊走我儿子的人就是你？”<br>
+　　他在问青青，却连看都没有去看青青一眼，这世界上好像根本就没有人能被他看在眼里。<br>
+　　“你儿子？”青青笑了，“那只鸟是你儿子？”<br>
+　　老人道：“那不是鸟，是鹰，是神鹰，是鹰中的神。”<br>
+　　他说话时的表情严肃而慎重，因为他说的绝不是谎话，也不是笑话。<br>
+　　青青却还在笑：“鹰也是鸟，你的儿子是鸟，难道你也是只鸟？”<br>
+　　老人发怒了。他的头发已半秃，他发怒时，秃顶上剩下的头发竟一根根竖起。<br>
+　　据说一个人的气功如果练到登峰造极时，是真的能怒发冲冠的。<br>
+　　但是天下绝没有任何人的气功能练到这样的境地，这种功力绝不是任何人能够企及的。<br>
+　　青青却好像连一点害怕的意思都没有，因为她也不是人。<br>
+　　她是狐。<br>
+　　据说狐是什么都不怕的。<br>
+　　老人的怒气居然很快就平息，冷冷道：“你能够惊走我的鹰儿，你的功力已经很不弱。”<br>
+　　青青道：“哦！”<br>
+　　老人道：“可是我不杀你！”<br>
+　　他傲然道：“因为这世上够资格让我杀的，已经只剩下两个人。”<br>
+　　青青道：“哎呀！”<br>
+　　老人道：“哎呀是什么意思？”<br>
+　　青青道：“哎呀的意思，就是你如果真要杀我，还是可以杀我！”<br>
+　　老人道：“为什么？”<br>
+　　青青道：“因为我根本不是人。”<br>
+　　老人道：“你是什么东西？”<br>
+　　青青道：“我也不是东西，我是狐。”<br>
+　　老人冷笑道：“狐鬼异类，更不配让我老人家拔剑！”<br>
+　　他不但气派大极了，胆子也大极。<br>
+　　他居然还是连看都没有看青青一眼，背负着双手，走向那株忘忧草。<br>
+　　——像他这么样一个人，难道也有什么忧愁烦恼要忘记？<br>
+　　青青忽然挡住了他的去路，道：“你不能动这棵忘忧草，连碰都不能碰。”<br>
+　　老人居然没有问她“为什么。”<br>
+　　现在她就在他面前，他已不能不看她，但是他仍没有抬头去看她的脸。<br>
+　　他在盯着她腰带上的那柄刀。<br>
+　　那柄青青的，弯弯的刀。
 
+×　　　　　　×　　　　　　×
+
+　　青青的弯刀在圆月下闪动着银光。<br>
+　　老人忽然伸出一只鸟爪般的手，道：“拿来！”<br>
+　　青青道：“拿什么？”<br>
+　　老人道：“你的刀。”<br>
+　　青青道：“我为什么要把我的刀拿给你？”<br>
+　　老人道：“因为我要看看。”<br>
+　　青青道：“现在你已经看见了。”<br>
+　　老人道：“我想看的是刀，不是刀鞘。”<br>
+　　青青道：“我劝你，只看看刀鞘就很不错了，绝不要看这把刀。”<br>
+　　老人道：“为什么？”<br>
+　　青青道：“因为这把刀是绝对看不得的。”<br>
+　　她轻轻地叹了口气：“因为看过这把刀的人，都已经死在这把刀下。”<br>
+　　老人忽然抬起头去看她的脸。<br>
+　　她的脸苍白而美丽，美得极艳而神秘，美得任何男人只要看过一眼就不能不动心。<br>
+　　这老人的反应却完全不同。他的瞳孔忽然收缩，眼睛里忽然露出种恐惧之极的表情。<br>
+　　他忽然失声而呼：“是你！”
+
+×　　　　　　×　　　　　　×
+
+　　难道这老人以前就见过青青？难道他以前就认得青青？<br>
+　　老人忽然又摇头，道：“不是，绝不是，你还年轻，你太年轻。”<br>
+　　青青也觉得有点奇怪，道：“你是不是认得一个很像我的人？”<br>
+　　老人道：　“我不认得你，我只认得这把刀，我绝不会认错的，绝不会……”<br>
+　　他忽然问青青：“这把刀上是不是刻着七个字？”<br>
+　　青青反问道：“哪七个字？”<br>
+　　老人道：“小楼一夜听春雨。”
+
+×　　　　　　×　　　　　　×
+
+　　“小楼一夜听春雨！”这是句诗，一句非常美的诗，美得凄凉，美得令人心碎。<br>
+　　丁鹏也读过这句诗。<br>
+　　每当他读到这句诗，或者听到这句诗的时候，他心里总会泛起一阵轻愁。一种“欲说还休”的轻愁，一种美极了的感情。<br>
+　　可是青青和这老人的反应却不同。说出这七个字的时候，老人的手在发抖，脸色已变了。听到这七个字的时候，青青的脸色也变了，忽然抛下手里的花篮，握住了刀柄。<br>
+　　那柄弯刀的刀柄。
+
+×　　　　　　×　　　　　　×
+
+　　青青的弯刀，刀柄也是弯弯的。<br>
+　　装满鲜花的花篮，从岩石上滚落下来，鲜花散落，缤纷如雨。<br>
+　　是花雨，不是春雨。<br>
+　　这里没有春雨，只有月，圆月。<br>
+　　在圆月下，听到这么美的一句诗，他们为什么会有这么奇怪的反应？<br>
+　　青青的手，紧紧握着这柄青青的弯刀的弯弯的刀柄。<br>
+　　老人在盯着她的手。<br>
+　　他已经用不着再问。如果刀上没有这七个字，她绝不会有这种反应。<br>
+　　老人眼睛里的表情奇怪至极，也不知是惊讶，是欢喜，还是恐惧。<br>
+　　他忽然仰天而笑，狂笑：“果然是这把刀，老天有眼，总算叫我找到了这把刀！”
+
+×　　　　　　×　　　　　　×
+
+　　狂笑声中，他的剑已出鞘。<br>
+　　三尺高的人，四尺长的剑，可是这柄剑握在这个人手里并不可笑。<br>
+　　这柄剑一出鞘，绝没有任何人还会注意到他这个人是个侏儒。<br>
+　　因为这柄剑一出鞘，就有一股逼人的剑气直迫眉睫而来。<br>
+　　连岩石下的丁鹏都已感觉到这股剑气，森寒肃杀的剑气，逼得他连眼睛都已睁不开。<br>
+　　等他再睁开眼时，只看见漫天剑光飞舞，青青已被笼罩在剑光下。<br>
+　　剑气破空，剑在呼啸。<br>
+　　老人的声音在剑风呼啸中还是听得很清楚，只听他一字字道：“你还不拔刀？”<br>
+　　青青还没有拔刀。<br>
+　　青青的弯刀，还在那个弯弯的刀鞘里。<br>
+　　老人忽然大喝：“杀！”
+
+×　　　　　　×　　　　　　×
+
+　　喝声如霹雳，剑光如闪电，就算闪电都没有如此亮，如此快！<br>
+　　剑光一闪，青青的人就从岩石上落了下来，就像一瓣鲜花忽然枯萎，坠下了花蒂。<br>
+　　十丈高的岩石，她落在地上，人就倒下。<br>
+　　老人并没有放过她。<br>
+　　老人也从十丈高的岩石上飞下，就像一片叶子般轻轻地，慢慢地飞下。<br>
+　　老人的掌中有剑，剑已出鞘。<br>
+　　老人掌中的剑，剑锋正对着青青的心脏。这一剑绝对是致命的一剑，准确，狠毒，迅速，无情。<br>
+　　丁鹏从未想到人世间会有这种剑法，这老人绝对不是人，是神。<br>
+　　杀神！<br>
+　　青青就倒在他身旁，青青已绝对没有招架闪避的能力。<br>
+　　看着这一剑飞落，丁鹏忽然扑过去，扑在青青的身上。<br>
+　　“反正我已经要死了，反正我已经非死不可。”他忽然觉得有种不可遏止的冲动，不管怎么样，他总是和青青一起来的。<br>
+　　不管青青是人是狐，总算对他不错。<br>
+　　他怎么能眼看着青青死在别人的剑下？<br>
+　　但是他却不妨死在别人的剑下，既然已非死不可，怎么死都一样。<br>
+　　他扑倒在青青身上。<br>
+　　他愿意替青青挨这一剑。
+
+×　　　　　　×　　　　　　×
+
+　　剑光一闪，刺人了他的背。<br>
+　　他并不觉得痛苦。<br>
+　　真正的痛苦，反而不会让人有痛苦的感觉。<br>
+　　他只觉得很冷，只觉得有种不可抗拒的寒意，忽然穿人了他的背，穿人了他的骨髓。<br>
+　　就在这时候，他看见青青拔出了她的刀。
+
+×　　　　　　×　　　　　　×
+
+　　青青的弯刀是青青的。<br>
+　　青青的刀光飞起时，丁鹏的眼睛已合起。<br>
+　　他没有看见青青的弯刀，他只听见那老人忽然发出一声惨呼。<br>
+　　然后他就又落人黑暗中，无边无际的黑暗，深不见底，永无止境。
+
+×　　　　　　×　　　　　　×
+
+　　黑暗中忽然有了光，月光。圆月。<br>
+　　丁鹏睁开眼，就看见一轮冰盘般的圆月。也看见了青青那双比月光更美的眼睛。<br>
+　　无论是在天上，还是在地下，都不会有第二双这么美丽的眼睛。<br>
+　　他还在青青身旁。<br>
+　　无论他是死是活，无论他是在天上，还是在地下，青青都仍在他身旁。<br>
+　　青青眼睛里还有泪光。<br>
+　　她是在为他流泪。<br>
+　　丁鹏忽然笑了笑，道：“看来现在我已用不着忘忧草了，可是我觉得这样死更好。”<br>
+　　他伸出手，轻拭她脸上的泪痕：“我从来也没有想到过，我死的时候，居然还有人为我流泪。”<br>
+　　青青的脸色却变了，连身子都已开始颤抖，忽然道：　“我真的在流泪？”<br>
+　　丁鹏道：“真的，你真的是在流泪，而且是在为我流泪。”<br>
+　　青青的脸色变得更奇怪，仿佛变得说不出的害怕，对她来说，流泪竟仿佛是件极可怕的事。<br>
+　　可是她在害怕之中，却又仿佛带着种说不出的喜悦。<br>
+　　这是种很奇怪的反应，丁鹏实在猜不透她为什么会有这种反应。<br>
+　　他忍不住道：“不管怎么样，我总是为你而死的，你为我流泪……”<br>
+　　青青忽然打断了他的话，道：“你没有死，也不会死了。”<br>
+　　丁鹏道：“为什么？”<br>
+　　青青道：“因为你已经死过一次，现在你既然已经到了这里，就不会再死了。”<br>
+　　丁鹏终于发现，这里已不是那美丽的忧愁之谷。这里是个更美的地方。　<br>
+　　圆月在窗外，窗里堆满了鲜花，他躺在一张比白雪更柔软的床上，床前悬挂着一粒明珠，珠光比月光更皎洁明亮。<br>
+　　他仿佛觉得自己曾经来过这里。<br>
+　　可是他也知道，如果他真的来过，也一定是在梦中。<br>
+　　因为人间绝没有这么华美的宫室，更没有这样的明珠。<br>
+　　“这里是什么地方？”<br>
+　　青青垂下头，轻轻地说：“这里是我的家。”
+
+【丁鹏挡剑，青青流泪，这段写的很很差，是典型男频yy小说的庸俗套路。我幻想的场景是，圆月，弯刀，漆黑一片，只有一个绝美的人影在若隐若现的闪动，面上带着轻蔑的微笑，自信而冷酷，突然间刀光一闪，弯刀划过的瞬间，如同一轮圆月点亮了整个黑夜，大地在短暂的光明之后马上又重新陷入了无边的黑暗之中。青青这个人应该让宫南燕来演，可能效果要更好一点。】
+
+-------
 任何一个序数必须是整数，这是为什么？ - 御坂16899号的回答 <br>
 https://www.zhihu.com/question/662465758/answer/3596734234
 
