--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,32 @@
 
 最新 5.21：
 
+（这首歌我很早以前就下过了，我一直以为这首歌的名字叫意难平）
+
+伍咏薇 - 圆月下你来依我
+
+作词:黄沾 作曲:顾嘉辉
+
+一些故梦　难说清楚<br>
+几点旧愁　谁愿点破<br>
+吻别往事　作别往时<br>
+告别昨日　恨爱的风波<br>
+星辉下　圆月光中<br>
+此刻深情　才是真我<br>
+美丽夜　美丽人　美丽事<br>
+令我想唱歌<br>
+风雨过　浮生里你伴我<br>
+湖海中穿梭<br>
+幽情小岛　忘忧你我<br>
+流光里面仰天卧<br>
+
+珍惜此夜　明月光清<br>
+珍惜此情　流露真我<br>
+记住美丽　记住这缘<br>
+我愿我愿　愿从今以后<br>
+记住记住　圆月下你来依我
+
+-------
 下四国军棋的最佳下法是双控，不是双控对家能相互配合也行。在四暗中，两个实力很强的人做对家，如果相互之间配合的不默契，那么也下不出什么好棋。
 
 第一届双明大师的视频我以前看过，是两个人坐在一起可以相互交流的，相当于双控，后面几届都是分开的，不能相互讨论。
