--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,11 @@
 
 （这首歌我很早以前就下过了，我一直以为这首歌的名字叫意难平）
 
+去优酷上随便搜了一下，没想到竟然找回来了。
+
+意难平 -圆月弯刀主题曲<br>
+https://v.youku.com/video?spm=a2hkm.8166622.PhoneSokuUgc_10.dscreenshot&&vid=XMTA4MTY1MDA=&playMode=pugv&frommaciku=1
+
 伍咏薇 - 圆月下你来依我
 
 作词:黄沾 作曲:顾嘉辉
@@ -16,6 +21,7 @@
 此刻深情　才是真我<br>
 美丽夜　美丽人　美丽事<br>
 令我想唱歌<br>
+
 风雨过　浮生里你伴我<br>
 湖海中穿梭<br>
 幽情小岛　忘忧你我<br>
