--- a/text/挑战.md
+++ b/text/挑战.md
@@ -7,7 +7,10 @@
 去优酷上随便搜了一下，没想到竟然找回来了。
 
 意难平 -圆月弯刀主题曲<br>
-https://v.youku.com/video?spm=a2hkm.8166622.PhoneSokuUgc_10.dscreenshot&&vid=XMTA4MTY1MDA=&playMode=pugv&frommaciku=1
+https://v.youku.com/video?vid=XMTA4MTY1MDA=&playMode=pugv&frommaciku=1
+
+《圆月弯刀》古版TV片头主题歌‘意难忘’ <br>
+https://www.bilibili.com/video/BV1n4411g7UL/
 
 伍咏薇 - 圆月下你来依我
 
