--- a/text/长文1.md
+++ b/text/长文1.md
@@ -161,7 +161,7 @@
 　　“这里是什么地方？”<br>
 　　青青垂下头，轻轻地说：“这里是我的家。”
 
-【丁鹏挡剑，青青流泪，这段写的很很差，是典型男频yy小说的庸俗套路。我幻想的场景是，圆月，弯刀，漆黑一片，只有一个绝美的人影在若隐若现的闪动，面上带着轻蔑的微笑，自信而冷酷，突然间刀光一闪，弯刀划过的瞬间，如同一轮圆月点亮了整个黑夜，大地在短暂的光明之后马上又重新陷入了无边的黑暗之中。青青这个人应该让宫南燕来演，可能效果要更好一点。】
+【丁鹏挡剑，青青流泪，这段写的很差，是典型男频yy小说的庸俗套路。我幻想的场景是，圆月，弯刀，漆黑一片，只有一个绝美的人影在若隐若现的闪动，面上带着轻蔑的微笑，自信而冷酷，突然间刀光一闪，弯刀划过的瞬间，如同一轮圆月点亮了整个黑夜，大地在短暂的光明之后马上又重新陷入了无边的黑暗之中。青青这个人应该让宫南燕来演，可能效果要更好一点。】
 
 -------
 任何一个序数必须是整数，这是为什么？ - 御坂16899号的回答 <br>
