--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,7 @@
+【阴谋论】原随云：檯面上的BOSS反抗幕后的终极BOSS(标题不能重复?)<br>
+https://book.douban.com/review/5699180/
+
+------
 Deepmind在军棋上战胜人类，How？ - Icybee的文章 <br>
 https://zhuanlan.zhihu.com/p/549532516
 
