--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,11 @@
 
 最新 5.21：
 
+李红袖一把抱住了她，格格笑道：“我真是个又会多心，又会吃醋的小坏蛋，蓉姐为什么还要对我这么好？”苏蓉蓉纤细的身子，竟被她抱了起来。
+
+哈哈哈~~我就是喜欢会吃醋的女孩子
+
+-------
 我曾经试图和在这里钓鱼的人建立现实中的联系，真的感觉自己好傻，在赛博空间里自娱自乐有什么不好的？不过回顾我这一年的种种经历，做的其他傻事也是够多的，也正是因为这些傻事才阴差阳错的构筑起了一个稳定的赛博空间。其实做傻事并不是最坏的结果，如同搞研究已经确定失败了其实也没什么，最坏的结果就是不确定自己的研究会成功还是失败，到现在为止我仍然无法确定。
 
 -------
