--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,152 @@
 
+　　现在，楚留香终于已将局势完全控制住了！已反客为主！ <br>
+　　但蝙蝠公子究竟是谁呢？ <br>
+　　他的人在哪里？ <br>
+　　这秘密眼见就要被揭穿，大家的心情反而更紧张。 <br>
+　　只有一个人的神情还很镇定，态度还很安详。 <br>
+　　这人当然就是原随云。 <br>
+　　楚留香目光忽然凝注在他脸上，道：“却不知原公子是否也要我将蝙蝠公子的名字说出来？” <br>
+　　原随云还是在微笑着，道：“香帅请说，在下洗耳恭听。” <br>
+　　楚留香叹了口气，道：“既然如此，在下就恭敬不如从命了。” <br>
+　　胡铁花忍不住道：“你就快说吧，难道真想急死人不成？” <br>
+　　楚留香道：“这里终年不见天日，也不见灯火，永远都在黑暗中，只因那位蝙蝠公子根本用不着光亮。” <br>
+　　他一字字接着道：“只因他本就是个见不到光明的瞎子！” <br>
+　　这句话说出，大家的眼睛忽然都一齐瞪在原随云脸上。 <br>
+　　原随云却还是不动声色，淡淡笑道：“在下就正是个瞎子。” <br>
+　　楚留香道：“阁下也就正是蝙蝠公子！” <br>
+　　原随云居然还是面不改色，道：“哦？我是么？” <br>
+　　楚留香道：“阁下虽震聋了英老先生的耳朵，但却还是慢了半步，他最后还是说出了一个字，有时一个字已足够泄漏很多秘密。” <br>
+　　英万里最后一声狂吼，只有一个字。 <br>
+　　“原……” <br>
+　　他吼声突然停顿，因为那时他已听不到自己的声音，在他说来，那简直比杀了他还可怕。 <br>
+　　只不过他耳朵未聋前，已听出了自铜管中发出的声音就是原随云——楚留香显然也早就在怀疑原随云。 <br>
+　　原随云沉默了很久，终于长长叹了口气，道：“看来，我毕竟还是低估了你。” <br>
+　　蝙蝠公子竟是原随云！ <br>
+　　胡铁花简直无法相信，任何人都无法相信。 <br>
+　　这气度高华，温柔有礼的世家子，竟做得出如此残酷、如此可怕的事。 <br>
+　　楚留香凝注着他，缓缓地道：“我并没有确实的证据能证明你是蝙蝠公子，你本可以狡辩否认的。” <br>
+　　原随云淡淡一笑，道：“我不必。” <br>
+　　他笑得虽淡漠，却带着种逼人的傲气。 <br>
+　　楚留香忽也长长叹息了一声，道：“我毕竟没有低估了你。” <br>
+　　原随云道：“我错了，你也错了。” <br>
+　　楚留香道：“我错了？” <br>
+　　原随云缓缓道：“我本来只想要你的一双眼睛，现在却势必要你的命！” <br>
+　　楚留香沉默了很久，缓缓道：“你有机会，但机会并不很大。” <br>
+　　原随云道：“至少比你的机会大，是么？” <br>
+　　楚留香道：“是！” <br>
+　　这“是”字虽是人人都会说的，但在此时此刻说出来，却不但要有超人的智慧，还得有过人的勇气。 <br>
+　　原随云也沉默了很久，忽然道：“有很多人对别人虽很了解，对自己却一无所知。” <br>
+　　楚留香道：“了解别人本就比了解自己容易。” <br>
+　　原随云道：“只有你，你不但能了解别人，也能了解自己，就只这一点，已非人能及。我与你为敌，实在也是逼不得已。” <br>
+　　楚留香叹道：“我也早就说过，世上最可怕的敌人就是你。” <br>
+　　原随云道：“你自知没有把握胜我？” <br>
+　　楚留香道：“是。” <br>
+　　原随云道：“既然如此，你为何还要与我交手？” <br>
+　　楚留香道：“势在必行，别无选择！” <br>
+　　原随云道：“好！” <br>
+　　他霍然长身而起，微笑着道：“久闻你往往能以寡敌众，以弱胜强，我倒想知道你用的是什么法子？” <br>
+　　楚留香淡淡道：“也没有什么别的法子，只不过是‘信心’二字而已！” <br>
+　　原随云道：“信心？” <br>
+　　楚留香道：“我确信邪必不能胜正，强权必不能胜公理，黑暗必不会久长，人世间必有光明存在！” <br>
+　　原随云的脸色终于变了，冷笑道：“信心能不能当饭吃？” <br>
+　　楚留香道：“不能，但人若无信心，和行尸走肉又有何异？” <br>
+　　原随云又笑了，道：“好！但愿你的信心能将我击倒。” <br>
+　　他袍袖一展，整个人突然飘飘飞起，就像是一只蝙蝠在无声的滑行，姿势真是说不出的优美。 <br>
+　　他这一掠之势并不快，但忽然间就落在楚留香的面前。 <br>
+　　绝没有人见到过原随云的武功，有人甚至不知道他也会武功，直等他这一手轻功露出，大家才都不禁为之耸然动容。 <br>
+　　原随云长袖垂地，微笑道：“请。” <br>
+　　楚留香也微笑着，道：“请！” <br>
+　　两人相对一揖，各各退后了三步，面上的微笑犹未消失。 <br>
+　　两人直到现在，还未疾言厉色说过一句话。 <br>
+　　在这种生死决战的一刹那，若是换了别人，纵不紧张得发抖，也难免要变得脸色铁青。 <br>
+　　他们却还是如此客气，如此多礼。 <br>
+　　他们的神经就好像是铁铸的，绝不会因任何事而紧张。 <br>
+　　但在这种温和的笑容后，隐藏着的却是什么呢？ <br>
+　　每个人都在瞧着他们的手。 <br>
+　　因为无论谁都可以想到，只要他们一出手，就必定是石破天惊、惊天动地的招式！ <br>
+　　每个人都在等着他们出手。 <br>
+　　就在这时，突听一人大喝道：“等一等，这一战是我的！”
+
+×　　　　　　×　　　　　　×
+
+　　人影一闪，胡铁花已挡在楚留香面前。 <br>
+　　楚留香皱眉道：“我已说过……” <br>
+　　胡铁花大声道：“我不管你说过什么，这一战你都得让给我！” <br>
+　　楚留香道：“为什么？” <br>
+　　胡铁花瞪着原随云，道：“我一见到这人，就拿他当做朋友，你们怀疑他时，我还百般为他辩护，可是……可是他却出卖了我。” <br>
+　　原随云叹了口气，道：“江湖中人心诡谲，你本不该随便交朋友。” <br>
+　　胡铁花咬着牙道：“我虽然看错了你，但出卖我的人也都要后悔的。” <br>
+　　原随云道：“后悔的人也许是你自己。” <br>
+　　他又叹了口气，道：“乘你现在还未后悔时，快退下去吧，我不愿和你交手。” <br>
+　　胡铁花怒道：“为什么？” <br>
+　　原随云淡淡道：“因为你绝不是我的对手，楚香帅也许还有三分机会，你却连一分机会也没有。” <br>
+　　胡铁花大喝道：“放屁……” <br>
+　　他的拳头和他的声音几乎是同时发出去的。 <br>
+　　拳风竟将他的喝声都压了下去。
+
+×　　　　　　×　　　　　　×
+
+　　谁都知道胡铁花是个又冲动、又暴躁的人，就算是为了芝麻绿豆般的一点点小事，他往往也会暴跳如雷，大发脾气。 <br>
+　　只有在一种时候，他反而比别人都能沉得住气。 <br>
+　　那就是打架的时候。 <br>
+　　他这一辈子也不知和人打过多少次架了，有时固然是和武林高手作生死相拼的决斗，但有时，他也会脱下衣服，打着赤膊，全不用武功和市井中的地痞流氓打个痛快。 <br>
+　　打过几百次架之后，他才学会了两个字：冷静！ <br>
+　　要打赢，就要冷静。 <br>
+　　无论谁打架都不希望打输的，胡铁花当然也不会例外。 <br>
+　　所以他就算已气得脸红脖子粗，但一到真的要打架的时候，他立刻就会冷静下来—— <br>
+　　从经验中得到的教训，总是特别不容易忘记。 <br>
+　　奇怪的是，他这一次却像是已将这教训完全忘得干干净净。 <br>
+　　他简直一点也不冷静。 <br>
+　　这一拳击出虽然很威风、很有力，但无论谁都可以看出，这种招式用来对付地痞流氓固然很有效，若用来对付蝙蝠公子这样的绝顶高手，简直就好像要用修指甲的小刀去屠牛一样不智。 <br>
+　　像胡铁花这种有经验的人，怎么会做出这种愚蠢的事？ <br>
+　　原随云果然全没有费半分力，就容容易易将这一招躲了过去。 <br>
+　　胡铁花反身错步，又是两拳击出。 <br>
+　　这两拳力量更大，拳风更响。 <br>
+　　虎虎的拳风将火苗拉得又高又长，却连原随云的衣袂都没有沾着。 <br>
+　　张三骂了他几百遍“呆子”了，此刻终于忍不住骂出口：“呆子，你小子真他妈的是个活生生的大呆子。” <br>
+　　原随云忽然笑了笑，道：“若有人认为他呆，那人自己才是呆子。” <br>
+　　他身形就像是一片云般在胡铁花四面飘动着，直到现在，还没有还手向胡铁花发出过一招。 <br>
+　　张三道：“你当然不会说他呆，你本就希望他越呆越好。” <br>
+　　原随云淡淡道：“你是不是要他用没有声音的招式对付我？” <br>
+　　张三还没有说话，胡铁花已怒道：“你虽然不是个东西，但姓胡的无论如何也不会用这种手段来对付个瞎子，你只管放心好了。” <br>
+　　原随云说话的声音还是很从容，和平时说话完全没什么不同，谁也不会听出他说话的时候正在和别人作生死的决斗。 <br>
+　　胡铁花说话却已有些不对劲了。 <br>
+　　原随云道：“我本来就放心得很。” <br>
+　　他又笑了笑，接着道：“无声的招式谁都会使的，若是用这种法子就能将我击倒，我还能活到现在么？” <br>
+　　他还是没有回手。 <br>
+　　胡铁花第十七拳已击出，突又硬生生收了回来。 <br>
+　　原随云身形也立刻停顿。 <br>
+　　胡铁花大声道：“现在是动手的时候，不是动嘴的时候，你懂不懂？” <br>
+　　原随云道：“我懂。” <br>
+　　胡铁花道：“既然懂，为什么不出手？” <br>
+　　原随云淡淡道：“这也许只是因为我太懂了。” <br>
+　　胡铁花道：“你懂什么？” <br>
+　　原随云说道：“你的意思就是要我出手，先让楚香帅看清我的武功家数，才好想法子来对付我，是么？” <br>
+　　胡铁花道：“哼！” <br>
+　　原随云叹了口气，道：“你的确不愧是他的好朋友，只可惜你这番心机全都白费了。” <br>
+　　胡铁花道：“哦？” <br>
+　　原随云道：“我会的武功一共有三十三种，无论用哪种都可将你击倒。” <br>
+　　胡铁花冷笑道：“你这三十三种功夫中最厉害的一种想必就是‘吹牛’。” <br>
+　　原随云非但不生气，反而笑了，道：“若是加上吹牛，就是三十四种。” <br>
+　　胡铁花道：“其余的三十三种，你倒也不妨说来听听。” <br>
+　　原随云道：“东瀛甲贺谷的‘大拍手’、血影人的轻功、华山派的‘清风十三式’、黄教密宗的‘大手印’、失传已久的‘朱砂掌’、蜀中唐门的毒药暗器……这几种功夫你们想必都已知道了。” <br>
+　　胡铁花道：“还有呢？” <br>
+　　原随云道：“还有巴山顾道人的‘七七四十九手回风舞柳剑’、少林的‘降龙伏虎罗汉拳’、武当的‘流云飞袖’、辰州言家的‘僵尸拳’、中原彭家的‘五虎断门刀’、北派正宗‘鸳鸯腿’……” <br>
+　　胡铁花道：“还有呢？” <br>
+　　原随云笑了笑，道：“就凭这十几种功夫还不够吗？” <br>
+　　胡铁花冷笑道：“既然你自己觉得很够了，为什么不敢出手？” <br>
+　　原随云道：“因为你既然曾经将我当做朋友，我至少总该让你多活些时候。” <br>
+　　胡铁花道：“哦？你想让我活多久？” <br>
+　　原随云道：“至少等到他们全都死光了之后。” <br>
+　　胡铁花道：“他们？” <br>
+　　原随云道：“‘他们’的意思，就是这个地方所有的人。” <br>
+　　胡铁花道：“你要将这里所有的人全杀光？” <br>
+　　原随云又笑了，道：“我的秘密已被他们知道，你以为我还会让他们活着？” <br>
+　　胡铁花瞪着他，忽然仰面大笑了起来，道：“各位听到了没有，这人不但会吹牛，还很会做梦！” <br>
+　　原随云道：“在你们说来，这的确是场噩梦，只可惜这场梦已永远没有醒的时候。” <br>
+　　张三忽也笑道：“只可惜你什么都瞧不见，否则也就说不出这种话了。”
+
+--------
 第四点，关于认识客观世界的问题。　
 
 　　人对客观世界的认识，由必然王国到自由王国的飞跃，要有一个过程。例如对于在中国如何进行民主革命的问题，从一九二一年党的建立直到一九四五年党的第七次代表大会，一共二十四年，我们全党的认识才完全统一起来。中间经过一次全党范围的整风，从一九四二年春天到一九四五年夏天，有三年半的时间。那是一次细致的整风，采用的方法是民主的方法，就是说，不管什么人犯了错误，只要认识了、改正了，就好了，而且大家帮助他认识，帮助他改正，叫做“惩前毖后，治病救人”，“从团结的愿望出发，经过批评或者斗争，分清是非，在新的基础上达到新的团结”。“团结——批评——团结”这个公式，就是在那个时候产生的。那次整风帮助全党同志统一了认识。对于当时的民主革命应当怎么办，党的总路线和各项具体政策应当怎么定，这些问题，都是在那个时期，特别是在整风之后，才得到完全解决的。
